Revert "Countrys in all Languages"
This reverts commit b2d02b343afe1ec7a7eccfb80b2e6a784f06deea.

--- a/Language/strings_bg.xml
+++ b/Language/strings_bg.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Филтър</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Любими</string>
@@ -13,240 +13,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Жанр</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Изтрий</string>
   <string name="Webradio.Dialog.Search.Header">Търси</string>
-	<string name="Country.Afghanistan">Афганистан</string>
-	<string name="Country.Åland Islands">Оландски острови</string>
-	<string name="Country.Albania">Албания</string>
-	<string name="Country.Algeria">Алжир</string>
-	<string name="Country.Andorra">Андора</string>
-	<string name="Country.Angola">Ангола</string>
-	<string name="Country.Anguilla">Ангуила</string>
-	<string name="Country.Antigua and Barbuda">Антигуа и Барбуда</string>
-	<string name="Country.Argentina">Аржентина</string>
-	<string name="Country.Armenia">Армения</string>
-	<string name="Country.Aruba">Аруба</string>
-	<string name="Country.Australia">Австралия</string>
-	<string name="Country.Austria">Австрия</string>
-	<string name="Country.Azerbaijan">Азербайджан</string>
-	<string name="Country.Bahamas">Бахамски острови</string>
-	<string name="Country.Bahrain">Бахрейн</string>
-	<string name="Country.Bangladesh">Бангладеш</string>
-	<string name="Country.Barbados">Барбадос</string>
-	<string name="Country.Belarus">Беларус</string>
-	<string name="Country.Belgium">Белгия</string>
-	<string name="Country.Belize">Белиз</string>
-	<string name="Country.Benin">Бенин</string>
-	<string name="Country.Bermuda">Бермуди</string>
-	<string name="Country.Bhutan">Бутан</string>
-	<string name="Country.Bolivia">Боливия</string>
-	<string name="Country.Bosnia and Herzegovina">Босна и Херцеговина</string>
-	<string name="Country.Botswana">Ботсуана</string>
-	<string name="Country.Brazil">Бразилия</string>
-	<string name="Country.British Virgin Islands">Британски Вирджински острови</string>
-	<string name="Country.Brunei">Бруней</string>
-	<string name="Country.Bulgaria">България</string>
-	<string name="Country.Burkina Faso">Буркина Фасо</string>
-	<string name="Country.Burundi">Бурунди</string>
-	<string name="Country.Cambodia">Камбоджа</string>
-	<string name="Country.Cameroon">Камерун</string>
-	<string name="Country.Canada">Канада</string>
-	<string name="Country.Cape Verde">Кабо Верде</string>
-	<string name="Country.Cayman Islands">Кайманови острови</string>
-	<string name="Country.Central African Republic">Централноафриканска република</string>
-	<string name="Country.Chad">Чад</string>
-	<string name="Country.Chile">Чили</string>
-	<string name="Country.China">Китай</string>
-	<string name="Country.Christmas Island">Остров Рождество</string>
-	<string name="Country.Cocos (Keeling) Islands">Кокосови острови</string>
-	<string name="Country.Colombia">Колумбия</string>
-	<string name="Country.Comoros">Коморски острови</string>
-	<string name="Country.Cook Islands">Кук</string>
-	<string name="Country.Costa Rica">Kosta-Rika</string>
-	<string name="Country.Côte d'Ivoire">Кот Д'Ивоар</string>
-	<string name="Country.Croatia">Хърватия</string>
-	<string name="Country.Cuba">Куба</string>
-	<string name="Country.Cyprus">Кипър</string>
-	<string name="Country.Czech Republic">Чехия</string>
-	<string name="Country.Denmark">Дания</string>
-	<string name="Country.Djibouti">Джибути</string>
-	<string name="Country.Dominica">Доминика</string>
-	<string name="Country.Dominican Republic">Доминиканска република</string>
-	<string name="Country.East Timor">Източен Тимор</string>
-	<string name="Country.Ecuador">Еквадор</string>
-	<string name="Country.Egypt">Египет</string>
-	<string name="Country.El Salvador">Ел Салвадор</string>
-	<string name="Country.Equatorial Guinea">Екваториална Гвинея</string>
-	<string name="Country.Eritrea">Еритрея</string>
-	<string name="Country.Estonia">Естония</string>
-	<string name="Country.Ethiopia">Етиопия</string>
-	<string name="Country.Ethiopia">Абисиния</string>
-	<string name="Country.Falkland Islands">Фолкландски острови</string>
-	<string name="Country.Faroe Islands">Фарьорски острови</string>
-	<string name="Country.Fiji">Фиджи</string>
-	<string name="Country.Finland">Финландия</string>
-	<string name="Country.France">Фpaнция</string>
-	<string name="Country.French Guiana">Френска Гвиана</string>
-	<string name="Country.French Polynesia">Френска Полинезия</string>
-	<string name="Country.French Southern and Antarctic Lands">Френски южни и Антарктически територии</string>
-	<string name="Country.Gabon">Габон</string>
-	<string name="Country.Georgia">Грузия</string>
-	<string name="Country.Germany">Гepмaния</string>
-	<string name="Country.Ghana">Гана</string>
-	<string name="Country.Gibraltar">Гибралтар</string>
-	<string name="Country.Greece">Гърция</string>
-	<string name="Country.Greenland">Гpeнлaндия</string>
-	<string name="Country.Grenada">Гренада</string>
-	<string name="Country.Guadeloupe">Гуаделупа</string>
-	<string name="Country.Guam">Гуам</string>
-	<string name="Country.Guatemala">Гватемала</string>
-	<string name="Country.Guinea">Гвинея</string>
-	<string name="Country.Guinea-Bissau">Gvineya-Bisau</string>
-	<string name="Country.Guyana">Гвиана</string>
-	<string name="Country.Haiti">Хаити</string>
-	<string name="Country.Holland">Холандия</string>
-	<string name="Country.Honduras">Хондурас</string>
-	<string name="Country.Hong Kong">Хонг Конг</string>
-	<string name="Country.Hungary">Унгария</string>
-	<string name="Country.Iceland">Иcлaндия</string>
-	<string name="Country.India">Индия</string>
-	<string name="Country.Indonesia">Индонезия</string>
-	<string name="Country.Iran">Иран</string>
-	<string name="Country.Iraq">Иpaк</string>
-	<string name="Country.Ireland">Иpлaндия</string>
-	<string name="Country.Israel">Израел</string>
-	<string name="Country.Italy">Итaлия</string>
-	<string name="Country.Jamaica">Ямайка</string>
-	<string name="Country.Japan">Япoния</string>
-	<string name="Country.Jordan">Йордания</string>
-	<string name="Country.Kazakhstan">Казахстан</string>
-	<string name="Country.Kenya">Кения</string>
-	<string name="Country.Kiribati">Кирибати</string>
-	<string name="Country.Korea">Корея</string>
-	<string name="Country.Kuwait">Кувейт</string>
-	<string name="Country.Kyrgyzstan">Киргизстан</string>
-	<string name="Country.Laos">Лаос</string>
-	<string name="Country.Latvia">Латвия</string>
-	<string name="Country.Lebanon">Ливaн</string>
-	<string name="Country.Lesotho">Лесото</string>
-	<string name="Country.Liberia">Либерия</string>
-	<string name="Country.Libya">Либия</string>
-	<string name="Country.Liechtenstein">Лихтенщайн</string>
-	<string name="Country.Lithuania">Литва</string>
-	<string name="Country.Luxembourg">Люкceмбуpг</string>
-	<string name="Country.Macau">Макао</string>
-	<string name="Country.Republic of Macedonia">Македония</string>
-	<string name="Country.Madagascar">Мадагаскар</string>
-	<string name="Country.Malawi">Малави</string>
-	<string name="Country.Malaysia">Малайзия</string>
-	<string name="Country.Maldives">Малдивски острови</string>
-	<string name="Country.Mali">Мали</string>
-	<string name="Country.Malta">Мальта</string>
-	<string name="Country.Marshall Islands">Маршалови острови</string>
-	<string name="Country.Martinique">Мартиника</string>
-	<string name="Country.Mauritania">Мавритания</string>
-	<string name="Country.Mauritius">Мавриций</string>
-	<string name="Country.Mexico">Мексико</string>
-	<string name="Country.Federated States of Micronesia">Микронезия</string>
-	<string name="Country.Moldova">Молдова</string>
-	<string name="Country.Monaco">Монако</string>
-	<string name="Country.Mongolia">Монголия</string>
-	<string name="Country.Montenegro">Черна гора</string>
-	<string name="Country.Montserrat">Монсерат</string>
-	<string name="Country.Morocco">Мароко</string>
-	<string name="Country.Mozambique">Мозамбик</string>
-	<string name="Country.Myanmar">Мианмар</string>
-	<string name="Country.Myanmar">Биpмa</string>
-	<string name="Country.Namibia">Намибия</string>
-	<string name="Country.Nauru">Науру</string>
-	<string name="Country.Nepal">Непал</string>
-	<string name="Country.Netherlands Antilles">Холандски Антили</string>
-	<string name="Country.Netherlands">Нидерландия</string>
-	<string name="Country.New Caledonia">Нова Каледония</string>
-	<string name="Country.New Zealand">Нова Зеландия</string>
-	<string name="Country.Nicaragua">Никарагуа</string>
-	<string name="Country.Niger">Нигер</string>
-	<string name="Country.Nigeria">Нигерия</string>
-	<string name="Country.Niue">Ниуе</string>
-	<string name="Country.Norfolk Island">Остров Норфолк</string>
-	<string name="Country.North Korea">Северна Корея</string>
-	<string name="Country.Northern Mariana Islands">Северни Мариански острови</string>
-	<string name="Country.Norway">Норвегия</string>
-	<string name="Country.Oman">Оман</string>
-	<string name="Country.Pakistan">Пакистан</string>
-	<string name="Country.Palau">Палау</string>
-	<string name="Country.Palestinian territories">Палестинска администрация</string>
-	<string name="Country.Panama">Панама</string>
-	<string name="Country.Papua New Guinea">Папуа Нова Гвинея</string>
-	<string name="Country.Paraguay">Парагвай</string>
-	<string name="Country.Peru">Перу</string>
-	<string name="Country.Philippines">Филипини</string>
-	<string name="Country.Poland">Полша</string>
-	<string name="Country.Portugal">Португалия</string>
-	<string name="Country.Monaco">Княжество Монако</string>
-	<string name="Country.Puerto Rico">Пуерто Рико</string>
-	<string name="Country.Qatar">Катар</string>
-	<string name="Country.Réunion">Реюнион</string>
-	<string name="Country.Romania">Румъния</string>
-	<string name="Country.Russia">Русия</string>
-	<string name="Country.Rwanda">Руанда</string>
-	<string name="Country.Saint Helena">Света Елена</string>
-	<string name="Country.Saint Kitts and Nevis">Сейнт Китс и Невис</string>
-	<string name="Country.Saint Lucia">Сейнт Лусия</string>
-	<string name="Country.Saint Vincent and the Grenadines">Сейнт Винсент и Гренадини</string>
-	<string name="Country.Samoa">Самоа</string>
-	<string name="Country.San Marino">Сан Марино</string>
-	<string name="Country.São Tomé and Príncipe">Сао Томе и Принсипи</string>
-	<string name="Country.Saudi Arabia">Саудитска Арабия</string>
-	<string name="Country.Scotland">Шотландия</string>
-	<string name="Country.Senegal">Сенегал</string>
-	<string name="Country.Serbia">Сърбия</string>
-	<string name="Country.Seychelles">Сейшелски острови</string>
-	<string name="Country.Sierra Leone">Сиера Леоне</string>
-	<string name="Country.Singapore">Сингапур</string>
-	<string name="Country.Slovakia">Словакия</string>
-	<string name="Country.Slovenia">Словения</string>
-	<string name="Country.Solomon Islands">Соломонови острови</string>
-	<string name="Country.Somalia">Сомалия</string>
-	<string name="Country.South Africa">Южноафриканска република</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Южна Джорджия и Южни Сандвичеви острови</string>
-	<string name="Country.South Korea">Южна Корея</string>
-	<string name="Country.Spain">Испания</string>
-	<string name="Country.Sri Lanka">Шри Ланка</string>
-	<string name="Country.Sri Lanka">Цейлон</string>
-	<string name="Country.Sudan">Судан</string>
-	<string name="Country.Suriname">Суринам</string>
-	<string name="Country.Swaziland">Свазиленд</string>
-	<string name="Country.Sweden">Швeция</string>
-	<string name="Country.Switzerland">Швeйцapия</string>
-	<string name="Country.Syria">Cиpия</string>
-	<string name="Country.Free Area of the Republic of China">Тайвань</string>
-	<string name="Country.Free Area of the Republic of China">Формоза</string>
-	<string name="Country.Tajikistan">Таджикистан</string>
-	<string name="Country.Tanzania">Танзания</string>
-	<string name="Country.Thailand">Тайланд</string>
-	<string name="Country.The Gambia">Гамбия</string>
-	<string name="Country.Togo">Того</string>
-	<string name="Country.Tonga">Тонга</string>
-	<string name="Country.Transnistria">Транзнистрия</string>
-	<string name="Country.Trinidad and Tobago">Тринидад и Тобаго</string>
-	<string name="Country.Tunisia">Тунис</string>
-	<string name="Country.Turkey">Турция</string>
-	<string name="Country.Northern Cyprus">Северен Кипър</string>
-	<string name="Country.Turkmenistan">Туркменистан</string>
-	<string name="Country.Tuvalu">Тувалу</string>
-	<string name="Country.Uganda">Уганда</string>
-	<string name="Country.Ukraine">Украйна</string>
-	<string name="Country.United Arab Emirates"> Obedineni arabski emirstva </string>
-	<string name="Country.United Kingdom">Obedinenoto Kralstvo</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Обединено кралство Великобритания и Северна Ирландия</string>
-	<string name="Country.Uruguay">Уругвай</string>
-	<string name="Country.Uzbekistan">Узбекистан</string>
-	<string name="Country.Vanuatu">Вануату</string>
-	<string name="Country.Vatican City">Ватикана</string>
-	<string name="Country.Venezuela">Венецуела</string>
-	<string name="Country.Vietnam">Виетнам</string>
-	<string name="Country.Wales">Уелс</string>
-	<string name="Country.Western Sahara">Западна Сахара</string>
-	<string name="Country.Yemen">Йемен</string>
-	<string name="Country.Zambia">Замбия</string>
-	<string name="Country.Zimbabwe">Зимбабве</string>
 </resources>
