--- a/Language/strings_ca.xml
+++ b/Language/strings_ca.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filtra</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Preferits</string>
@@ -18,129 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Gènere</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Suprimeix</string>
   <string name="Webradio.Dialog.Search.Header">Cerca</string>
-	<string name="Country.Afghanistan">Afganistan</string>
-	<string name="Country.Åland Islands">Illes Åland</string>
-	<string name="Country.Albania">Albània</string>
-	<string name="Country.Algeria">Algèria</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antiga i Barbuda</string>
-	<string name="Country.Armenia">Armènia</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Austràlia</string>
-	<string name="Country.Austria">Àustria</string>
-	<string name="Country.Azerbaijan">Azerbaidjan</string>
-	<string name="Country.Bahamas">Bahames</string>
-	<string name="Country.Bahrain">Bahrein</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Belarus">Bielorússia</string>
-	<string name="Country.Belgium">Bèlgica</string>
-	<string name="Country.Belize">Belice</string>
-	<string name="Country.Bermuda">Bermudes</string>
-	<string name="Country.Bhutan">Butan</string>
-	<string name="Country.Bolivia">Bolívia</string>
-	<string name="Country.Bosnia and Herzegovina">Bòsnia-Herzegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasil</string>
-	<string name="Country.British Virgin Islands">Illes Verges Britàniques</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgària</string>
-	<string name="Country.Cambodia">Cambodja</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Canadà</string>
-	<string name="Country.Cape Verde">Cap Verd</string>
-	<string name="Country.Chad">Txad</string>
-	<string name="Country.Chile">Xile</string>
-	<string name="Country.China">Xina</string>
-	<string name="Country.Christmas Island">Illa Christmas</string>
-	<string name="Country.Cocos (Keeling) Islands">Illes Cocos</string>
-	<string name="Country.Colombia">Colòmbia</string>
-	<string name="Country.Comoros">Comores</string>
-	<string name="Country.Croatia">Croàcia</string>
-	<string name="Country.Cyprus">Xipre</string>
-	<string name="Country.Czech Republic">Txèquia</string>
-	<string name="Country.Denmark">Dinamarca</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.East Timor">Timor Oriental</string>
-	<string name="Country.Egypt">Egipte</string>
-	<string name="Country.Equatorial Guinea">Guinea Equatorial</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estònia</string>
-	<string name="Country.Ethiopia">Etiòpia</string>
-	<string name="Country.Falkland Islands">Illes Malvines</string>
-	<string name="Country.Finland">Finlàndia</string>
-	<string name="Country.France">França</string>
-	<string name="Country.French Polynesia">Polinèsia Francesa</string>
-	<string name="Country.French Southern and Antarctic Lands">Terres Australs i Antàrtiques Franceses</string>
-	<string name="Country.Georgia">Geòrgia</string>
-	<string name="Country.Germany">Alemanya</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Greece">Grècia</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadalupe</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Haiti">Haití</string>
-	<string name="Country.Hong Kong">Hong Kong</string>
-	<string name="Country.Hungary">Hongria</string>
-	<string name="Country.Iceland">Islàndia</string>
-	<string name="Country.India">l'Índia</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Ireland">Irlanda</string>
-	<string name="Country.Italy">Itàlia</string>
-	<string name="Country.Japan">el Japó</string>
-	<string name="Country.Latvia">Letònia</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Libya">Libia</string>
-	<string name="Country.Lithuania">Lituània</string>
-	<string name="Country.Luxembourg">Luxemburg</string>
-	<string name="Country.Macau">Macau</string>
-	<string name="Country.Republic of Macedonia">Macedònia</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Marshall Islands">Illes Marshall</string>
-	<string name="Country.Martinique">Martinica</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mèxic</string>
-	<string name="Country.Federated States of Micronesia">Micronèsia</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Montserrat">Montserrat</string>
-	<string name="Country.Morocco">el Marroc</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Netherlands Antilles">Antilles Neerlandeses</string>
-	<string name="Country.Netherlands">Països Baixos</string>
-	<string name="Country.New Caledonia">Nova Caledònia</string>
-	<string name="Country.Niger">Níger</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Illa Norfolk</string>
-	<string name="Country.Northern Mariana Islands">Illes Mariannes Septentrionals</string>
-	<string name="Country.Norway">Noruega</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Panama">Panamà</string>
-	<string name="Country.Peru">Perú</string>
-	<string name="Country.Philippines">Filipines</string>
-	<string name="Country.Poland">Polònia</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Romania">Romania</string>
-	<string name="Country.Russia">Rússia</string>
-	<string name="Country.Scotland">Escòcia</string>
-	<string name="Country.Serbia">Sèrbia</string>
-	<string name="Country.Slovakia">Eslovàquia</string>
-	<string name="Country.Slovenia">Eslovènia</string>
-	<string name="Country.Spain">Espanya</string>
-	<string name="Country.Sweden">Suècia</string>
-	<string name="Country.Switzerland">Suïssa</string>
-	<string name="Country.Syria">Síria</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tadjikistan</string>
-	<string name="Country.Tunisia">Tunísia</string>
-	<string name="Country.Turkey">Turquia</string>
-	<string name="Country.Northern Cyprus">Xipre del Nord</string>
-	<string name="Country.Ukraine">Ucraïna</string>
-	<string name="Country.United Kingdom">Regne Unit</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Regne Unit de la Gran Bretanya i Irlanda del Nord</string>
-	<string name="Country.United States of America">Estats Units d'Amèrica del Nord</string>
-	<string name="Country.Vanuatu">Noves Hèbrides</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">País de Gaŀles</string>
-	<string name="Country.Yemen">Yemen</string>
 </resources>
