--- a/Language/strings_cs.xml
+++ b/Language/strings_cs.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filtr</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Oblíbené</string>
@@ -18,235 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Žánr</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Odstranit</string>
   <string name="Webradio.Dialog.Search.Header">Hledat</string>
-	<string name="Country.Afghanistan">Afganistan</string>
-	<string name="Country.Afghanistan">Afghánistán</string>
-	<string name="Country.Åland Islands">Ålandy</string>
-	<string name="Country.Albania">Albánie</string>
-	<string name="Country.Algeria">Alžírsko</string>
-	<string name="Country.American Samoa">Americká Samoa</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua a Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Arménie</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Austrálie</string>
-	<string name="Country.Austria">Rakousko</string>
-	<string name="Country.Azerbaijan">Ázerbájdžán</string>
-	<string name="Country.Bahamas">Bahamy</string>
-	<string name="Country.Bahrain">Bahrajn</string>
-	<string name="Country.Bangladesh">Bangladéš</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Bělorusko</string>
-	<string name="Country.Belgium">Belgie</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Belize">Britský Honduras</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Bermuda">Bermudy</string>
-	<string name="Country.Bhutan">Bhútán</string>
-	<string name="Country.Bolivia">Bolívie</string>
-	<string name="Country.Bosnia and Herzegovina">Bosna a Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brazílie</string>
-	<string name="Country.British Virgin Islands">Britské Panenské ostrovy</string>
-	<string name="Country.Brunei">Brunej</string>
-	<string name="Country.Bulgaria">Bulharsko</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Cambodia">Kambodža</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Kapverdy</string>
-	<string name="Country.Cayman Islands">Kajmanské ostrovy</string>
-	<string name="Country.Central African Republic">Středoafrická republika</string>
-	<string name="Country.Chad">Čad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">Čína</string>
-	<string name="Country.Christmas Island">Vánoční ostrov</string>
-	<string name="Country.Cocos (Keeling) Islands">Kokosové ostrovy</string>
-	<string name="Country.Colombia">Kolumbie</string>
-	<string name="Country.Comoros">Komory</string>
-	<string name="Country.Cook Islands">Cookovy ostrovy</string>
-	<string name="Country.Costa Rica">Kostarika</string>
-	<string name="Country.Côte d'Ivoire">Pobřeží slonoviny</string>
-	<string name="Country.Croatia">Chorvatsko</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Kypr</string>
-	<string name="Country.Czech Republic">Česká republika</string>
-	<string name="Country.Denmark">Dánsko</string>
-	<string name="Country.Djibouti">Džibutsko</string>
-	<string name="Country.Dominica">Dominika</string>
-	<string name="Country.Dominican Republic">Dominikánská republika</string>
-	<string name="Country.East Timor">Východní Timor</string>
-	<string name="Country.Ecuador">Ekvádor</string>
-	<string name="Country.Egypt">Egypt</string>
-	<string name="Country.England">Anglie</string>
-	<string name="Country.Equatorial Guinea">Rovníková Guinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estonsko</string>
-	<string name="Country.Ethiopia">Etiopie</string>
-	<string name="Country.Ethiopia">Habeš</string>
-	<string name="Country.Falkland Islands">Falklandy</string>
-	<string name="Country.Faroe Islands">Faerské ostrovy</string>
-	<string name="Country.Fiji">Fidži</string>
-	<string name="Country.Finland">Finsko</string>
-	<string name="Country.France">Francie</string>
-	<string name="Country.French Guiana">Francouzská Guyana</string>
-	<string name="Country.French Polynesia">Francouzská Polynésie</string>
-	<string name="Country.French Southern and Antarctic Lands">Francouzská jižní a antarktická území</string>
-	<string name="Country.Georgia">Gruzie</string>
-	<string name="Country.Germany">Německo</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Greece">Řecko</string>
-	<string name="Country.Greenland">Grónsko</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadeloupe</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holandsko</string>
-	<string name="Country.Holy See">Svatý stolec</string>
-	<string name="Country.Hong Kong">Hong Kong</string>
-	<string name="Country.Hungary">Maďarsko</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">Indie</string>
-	<string name="Country.Indonesia">Indonésie</string>
-	<string name="Country.Iran">Írán</string>
-	<string name="Country.Iraq">Irák</string>
-	<string name="Country.Ireland">Irsko</string>
-	<string name="Country.Israel">Izrael</string>
-	<string name="Country.Italy">Itálie</string>
-	<string name="Country.Jamaica">Jamajka</string>
-	<string name="Country.Japan">Japonsko</string>
-	<string name="Country.Jordan">Jordánsko</string>
-	<string name="Country.Jordan">Transjordánsko</string>
-	<string name="Country.Kazakhstan">Kazachstán</string>
-	<string name="Country.Kenya">Keňa</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuvajt </string>
-	<string name="Country.Kyrgyzstan">Kyrgyzstán</string>
-	<string name="Country.Latvia">Lotyšsko</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Libérie</string>
-	<string name="Country.Libya">Libye</string>
-	<string name="Country.Liechtenstein">Lichtenštejnsko</string>
-	<string name="Country.Lithuania">Litva</string>
-	<string name="Country.Luxembourg">Lucembursko</string>
-	<string name="Country.Republic of Macedonia">Makedonie</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malajsie</string>
-	<string name="Country.Maldives">Maledivy</string>
-	<string name="Country.Marshall Islands">Marshallovy ostrovy</string>
-	<string name="Country.Martinique">Martinik</string>
-	<string name="Country.Mauritania">Mauritánie</string>
-	<string name="Country.Mauritius">Mauricius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexiko</string>
-	<string name="Country.Federated States of Micronesia">Micronésie</string>
-	<string name="Country.Moldova">Moldávie</string>
-	<string name="Country.Monaco">Monako</string>
-	<string name="Country.Mongolia">Mongolsko</string>
-	<string name="Country.Montenegro">Černá Hora</string>
-	<string name="Country.Montserrat">Montserrat</string>
-	<string name="Country.Morocco">Maroko</string>
-	<string name="Country.Mozambique">Mozambik</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Barma</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepál</string>
-	<string name="Country.Netherlands Antilles">Nizozemské Antily</string>
-	<string name="Country.Netherlands">Nizozemsko</string>
-	<string name="Country.New Caledonia">Nová Kaledonie</string>
-	<string name="Country.New Zealand">Nový Zéland</string>
-	<string name="Country.Nicaragua">Nikaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigérie</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Norfolk</string>
-	<string name="Country.North Korea">Severní Korea</string>
-	<string name="Country.Northern Mariana Islands">Severní Mariany</string>
-	<string name="Country.Norway">Norsko</string>
-	<string name="Country.Oman">Omán</string>
-	<string name="Country.Pakistan">Pákistán</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Papua New Guinea">Papua-Nová Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Philippines">Filipíny</string>
-	<string name="Country.Pitcairn Islands">Pitcairnovy ostrovy</string>
-	<string name="Country.Poland">Polsko</string>
-	<string name="Country.Portugal">Portugalsko</string>
-	<string name="Country.Monaco">Monacké knížectví</string>
-	<string name="Country.Puerto Rico">Portoriko</string>
-	<string name="Country.Qatar">Katar</string>
-	<string name="Country.Réunion">Réunion</string>
-	<string name="Country.Romania">Rumunsko</string>
-	<string name="Country.Russia">Rusko</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Kitts and Nevis">Svatý Kryštof a Nevis</string>
-	<string name="Country.Saint Lucia">Svatá Lucie</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint Pierre a Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines"> Svatý Vincenc a Grenadiny </string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">Svatý Tomáš a Princův ostrov</string>
-	<string name="Country.Saudi Arabia">Saúdská Arábie</string>
-	<string name="Country.Scotland">Skotsko</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Srbsko</string>
-	<string name="Country.Seychelles">Seychely</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapur</string>
-	<string name="Country.Slovakia">Slovensko</string>
-	<string name="Country.Slovenia">Slovinsko</string>
-	<string name="Country.Solomon Islands">Šalamounovy ostrovy</string>
-	<string name="Country.Somalia">Somálsko</string>
-	<string name="Country.South Africa">Jihoafrická republika</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Jižní Georgie a Jižní Sandvichovy ostrovy</string>
-	<string name="Country.South Korea">Jižní Korea</string>
-	<string name="Country.South Ossetia">Jižní Osetie</string>
-	<string name="Country.Spain">Španělsko</string>
-	<string name="Country.Sri Lanka">Srí Lanka</string>
-	<string name="Country.Sri Lanka">Cejlon</string>
-	<string name="Country.Sudan">Súdán</string>
-	<string name="Country.Suriname">Surinam</string>
-	<string name="Country.Swaziland">Svazijsko</string>
-	<string name="Country.Sweden">Švédsko</string>
-	<string name="Country.Switzerland">Švýcarsko</string>
-	<string name="Country.Syria">Sýrie</string>
-	<string name="Country.Tajikistan">Tádžikistán</string>
-	<string name="Country.Tanzania">Tanzanie</string>
-	<string name="Country.Thailand">Thajsko</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tokelau Islands">Tokelau</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Transnistria">Podněstří</string>
-	<string name="Country.Trinidad and Tobago">Trinidad a Tobago</string>
-	<string name="Country.Tunisia">Tunisko</string>
-	<string name="Country.Turkey">Turecko</string>
-	<string name="Country.Northern Cyprus">Severní Kypr</string>
-	<string name="Country.Turkmenistan">Turkmenistán</string>
-	<string name="Country.Turks and Caicos Islands">Turks a Caicos</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukrajina</string>
-	<string name="Country.United Arab Emirates"> Spojené arabské emiráty </string>
-	<string name="Country.United Kingdom">Spojené království</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Spojené království Velké Británie a Severního Irska</string>
-	<string name="Country.United States of America">Spojené státy americké</string>
-	<string name="Country.United States Virgin Islands">Americké Panenské ostrovy</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Uzbekistán</string>
-	<string name="Country.Vanuatu">Nové Hebridy</string>
-	<string name="Country.Vatican City">Vatikán</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Wallis and Futuna">Wallis a Futuna</string>
-	<string name="Country.Western Sahara">Západní Sahara</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Zambie</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
