--- a/Language/strings_da.xml
+++ b/Language/strings_da.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">Syn</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtrer</string>
@@ -19,196 +19,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Slet</string>
   <string name="Webradio.Dialog.Search.Header">Søg</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Algeria">Algeriet</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua og Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenien</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australien</string>
-	<string name="Country.Austria">Østrig</string>
-	<string name="Country.Azerbaijan">Aserbajdsjan</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Hviderusland</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnien-Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasilien</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgarien</string>
-	<string name="Country.Cambodia">Cambodja</string>
-	<string name="Country.Cameroon">Cameroun</string>
-	<string name="Country.Canada">Canada</string>
-	<string name="Country.Cape Verde">Kap Verde</string>
-	<string name="Country.Central African Republic">Den Centralafrikanske Republik</string>
-	<string name="Country.Chad">Tchad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">Kina</string>
-	<string name="Country.Christmas Island">Christmas Island</string>
-	<string name="Country.Cocos (Keeling) Islands">Cocosøerne</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Comorerne</string>
-	<string name="Country.Côte d'Ivoire">Côte d'Ivoire</string>
-	<string name="Country.Croatia">Kroatien</string>
-	<string name="Country.Cyprus">Cypern</string>
-	<string name="Country.Czech Republic">Tjekkiet</string>
-	<string name="Country.Denmark">Danmark</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.East Timor">Østtimor</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egypten</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.England">England</string>
-	<string name="Country.Equatorial Guinea">Ækvatorialguinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estland</string>
-	<string name="Country.Ethiopia">Etiopien</string>
-	<string name="Country.Ethiopia">Abessinien</string>
-	<string name="Country.Falkland Islands">Falklandsøerne</string>
-	<string name="Country.Faroe Islands">Færøerne</string>
-	<string name="Country.Fiji">Fiji</string>
-	<string name="Country.Finland">Finland</string>
-	<string name="Country.France">Frankrig</string>
-	<string name="Country.French Polynesia">Fransk Polynesien</string>
-	<string name="Country.Georgia">Georgien</string>
-	<string name="Country.Germany">Tyskland</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Greece">Grækenland</string>
-	<string name="Country.Greenland">Grønland</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">den Hellige Stol</string>
-	<string name="Country.Hungary">Ungarn</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">Indien</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Irland</string>
-	<string name="Country.Italy">Italien</string>
-	<string name="Country.Japan">Japan</string>
-	<string name="Country.Jordan">Jordan</string>
-	<string name="Country.Jordan">Transjordan</string>
-	<string name="Country.Kazakhstan">Kasakhstan</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirgisistan</string>
-	<string name="Country.Latvia">Letland</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Liberia</string>
-	<string name="Country.Libya">Libyen</string>
-	<string name="Country.Lithuania">Litauen</string>
-	<string name="Country.Luxembourg">Luxembourg</string>
-	<string name="Country.Republic of Macedonia">Makedonien</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Maldiverne</string>
-	<string name="Country.Marshall Islands">Marshalløerne</string>
-	<string name="Country.Mauritania">Mauretanien</string>
-	<string name="Country.Mauritius">Mauritius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexico</string>
-	<string name="Country.Federated States of Micronesia">Mikronesien</string>
-	<string name="Country.Moldova">Moldavien</string>
-	<string name="Country.Moldova">Moldova</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongoliet</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Morocco">Marokko</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Burma</string>
-	<string name="Country.Namibia">Namibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Netherlands">Nederlandene</string>
-	<string name="Country.New Caledonia">Ny Kaledonien</string>
-	<string name="Country.New Zealand">New Zealand</string>
-	<string name="Country.Nicaragua">Nicaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Norfolk Island</string>
-	<string name="Country.North Korea">Nordkorea</string>
-	<string name="Country.Northern Mariana Islands">Nordmarianerne</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palestinian territories">Palæstina</string>
-	<string name="Country.Papua New Guinea">Papua Ny Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Philippines">Filippinerne</string>
-	<string name="Country.Poland">Polen</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Fyrstedømmet Monaco</string>
-	<string name="Country.Qatar">Qatar</string>
-	<string name="Country.Romania">Rumænien</string>
-	<string name="Country.Russia">Rusland</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Kitts and Nevis">Saint Kitts og Nevis</string>
-	<string name="Country.Saint Lucia">Saint Lucia</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint Pierre og Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent og Grenadinerne</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">São Tomé og Príncipe</string>
-	<string name="Country.Saudi Arabia">Saudi-Arabien</string>
-	<string name="Country.Scotland">Skotland</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbien</string>
-	<string name="Country.Seychelles">Seychellerne</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapore</string>
-	<string name="Country.Slovakia">Slovakiet</string>
-	<string name="Country.Slovenia">Slovenien</string>
-	<string name="Country.Solomon Islands">Salomonøerne</string>
-	<string name="Country.Somalia">Somalia</string>
-	<string name="Country.South Africa">Sydafrika</string>
-	<string name="Country.South Korea">Sydkorea</string>
-	<string name="Country.South Ossetia">Sydossetien</string>
-	<string name="Country.Spain">Spanien</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sudan">Sudan</string>
-	<string name="Country.Suriname">Surinam</string>
-	<string name="Country.Swaziland">Swaziland</string>
-	<string name="Country.Sweden">Sverige</string>
-	<string name="Country.Switzerland">Schweiz</string>
-	<string name="Country.Syria">Syrien</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tadsjikistan</string>
-	<string name="Country.Tanzania">Tanzania</string>
-	<string name="Country.Thailand">Thailand</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Trinidad and Tobago">Trinidad og Tobago</string>
-	<string name="Country.Tunisia">Tunesien</string>
-	<string name="Country.Turkey">Tyrkiet</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukraine</string>
-	<string name="Country.United Kingdom">Storbritannien</string>
-	<string name="Country.United States of America">Amerikas Forenede Stater</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Usbekistan</string>
-	<string name="Country.Vanuatu">Ny Hebriderne</string>
-	<string name="Country.Vatican City">Vatikanstaten</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Wallis and Futuna">Wallis og Futunaøerne</string>
-	<string name="Country.Western Sahara">Vestsahara</string>
-	<string name="Country.Yemen">Yemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
