--- a/Language/strings_de.xml
+++ b/Language/strings_de.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.MenuEntry">Webradio</string>
   <string name="Webradio.StateDisplayLabel">Webradio</string>
@@ -46,231 +46,4 @@
   <string name="Webradio.Dialog.ImportFavorites.Header">Favoriten Öffnen</string>
   <string name="Webradio.Dialog.Search.Header">Suche</string>
   <string name="Webradio.UIContributor.Listeners">Zuhörer:</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Åland Islands">Åland-Inseln</string>
-	<string name="Country.Algeria">Algerien</string>
-	<string name="Country.American Samoa">Amerikanisch-Samoa</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua und Barbuda</string>
-	<string name="Country.Argentina">Argentinien</string>
-	<string name="Country.Armenia">Armenien</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australien</string>
-	<string name="Country.Austria">Österreich</string>
-	<string name="Country.Azerbaijan">Aserbaidschan</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesch</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Weißrussland</string>
-	<string name="Country.Belarus">Weißruthenien</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Belize">Britisch-Honduras</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Benin">Dahomey</string>
-	<string name="Country.Bermuda">Bermuda</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivien</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnien und Herzegowina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasilien</string>
-	<string name="Country.British Virgin Islands">Britische Jungferninseln</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgarien</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Burkina Faso">Obervolta</string>
-	<string name="Country.Burundi">Urundi</string>
-	<string name="Country.Cambodia">Kambodscha</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Kap Verde</string>
-	<string name="Country.Cayman Islands">Kaimaninseln</string>
-	<string name="Country.Central African Republic">Zentralafrikanische Republik</string>
-	<string name="Country.Chad">Tschad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">China</string>
-	<string name="Country.Christmas Island">Weihnachtsinsel</string>
-	<string name="Country.Cocos (Keeling) Islands">Kokosinseln</string>
-	<string name="Country.Colombia">Kolumbien</string>
-	<string name="Country.Comoros">Komoren</string>
-	<string name="Country.Cook Islands">Cook-Inseln</string>
-	<string name="Country.Costa Rica">Costa Rica</string>
-	<string name="Country.Côte d'Ivoire">Côte d'Ivoire</string>
-	<string name="Country.Croatia">Kroatien</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Zypern</string>
-	<string name="Country.Czech Republic">Tschechien</string>
-	<string name="Country.Denmark">Dänemark</string>
-	<string name="Country.Djibouti">Dschibuti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.Dominican Republic">Dominikanische Republik</string>
-	<string name="Country.East Timor">Timor-Leste</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Ägypten</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.England">England</string>
-	<string name="Country.Equatorial Guinea">Äquatorialguinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estland</string>
-	<string name="Country.Ethiopia">Äthiopien</string>
-	<string name="Country.Ethiopia">Abessinien</string>
-	<string name="Country.Falkland Islands">Falklandinseln</string>
-	<string name="Country.Fiji">Fidschi</string>
-	<string name="Country.Finland">Finnland</string>
-	<string name="Country.France">Frankreich</string>
-	<string name="Country.French Guiana">Französisch-Guayana</string>
-	<string name="Country.French Polynesia">Französisch-Polynesien</string>
-	<string name="Country.French Southern and Antarctic Lands">Französische Süd- und Antarktisgebiete</string>
-	<string name="Country.Gabon">Gabun</string>
-	<string name="Country.Georgia">Georgien</string>
-	<string name="Country.Germany">Deutschland</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Greece">Griechenland</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">Heiliger Stuhl</string>
-	<string name="Country.Hungary">Ungarn</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">Indien</string>
-	<string name="Country.Indonesia">Indonesien</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iran">Persien</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Irland</string>
-	<string name="Country.Italy">Italien</string>
-	<string name="Country.Japan">Japan</string>
-	<string name="Country.Jordan">Jordanien</string>
-	<string name="Country.Jordan">Transjordanien</string>
-	<string name="Country.Kazakhstan">Kasachstan</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirgisistan</string>
-	<string name="Country.Latvia">Lettland</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Liberia</string>
-	<string name="Country.Libya">Libyen</string>
-	<string name="Country.Lithuania">Litauen</string>
-	<string name="Country.Luxembourg">Luxemburg</string>
-	<string name="Country.Republic of Macedonia">Mazedonien</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Malediven</string>
-	<string name="Country.Marshall Islands">Marshallinseln</string>
-	<string name="Country.Mauritania">Mauretanien</string>
-	<string name="Country.Mauritius">Mauritius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexiko</string>
-	<string name="Country.Federated States of Micronesia">Mikronesien</string>
-	<string name="Country.Moldova">Moldawien</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongolei</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Morocco">Marokko</string>
-	<string name="Country.Mozambique">Mosambik</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Birma</string>
-	<string name="Country.Namibia">Namibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepal</string>
-	<string name="Country.Netherlands Antilles">Niederländische Antillen</string>
-	<string name="Country.Netherlands">Niederlande</string>
-	<string name="Country.New Caledonia">Neukaledonien</string>
-	<string name="Country.New Zealand">Neuseeland</string>
-	<string name="Country.Nicaragua">Nicaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Norfolkinsel</string>
-	<string name="Country.North Korea">Nordkorea</string>
-	<string name="Country.Northern Mariana Islands">Nördliche Marianen</string>
-	<string name="Country.Norway">Norwegen</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palestinian territories">Palästina</string>
-	<string name="Country.Papua New Guinea">Papua-Neuguinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Philippines">Philippinen</string>
-	<string name="Country.Poland">Polen</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Fürstentum Monaco</string>
-	<string name="Country.Qatar">Katar</string>
-	<string name="Country.Réunion">Réunion</string>
-	<string name="Country.Romania">Rumänien</string>
-	<string name="Country.Russia">Russland</string>
-	<string name="Country.Rwanda">Ruanda</string>
-	<string name="Country.Saint Helena">Sankt Helena</string>
-	<string name="Country.Saint Kitts and Nevis">Saint Kitts und Nevis</string>
-	<string name="Country.Saint Lucia">Saint Lucia</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint Pierre und Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent und die Grenadinen</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">São Tomé und Príncipe</string>
-	<string name="Country.Saudi Arabia">Saudi-Arabien</string>
-	<string name="Country.Scotland">Schottland</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbien</string>
-	<string name="Country.Seychelles">Seychellen</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapur</string>
-	<string name="Country.Slovakia">Slowakei</string>
-	<string name="Country.Slovenia">Slowenien</string>
-	<string name="Country.Solomon Islands">Salomonen</string>
-	<string name="Country.Somalia">Somalia</string>
-	<string name="Country.South Africa">Südafrika</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Südgeorgien und Südliche Sandwichinseln</string>
-	<string name="Country.South Korea">Südkorea</string>
-	<string name="Country.South Ossetia">Südossetien</string>
-	<string name="Country.Spain">Spanien</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sri Lanka">Ceylon</string>
-	<string name="Country.Sudan">Sudan</string>
-	<string name="Country.Suriname">Suriname</string>
-	<string name="Country.Suriname">Niederländisch-Guyana</string>
-	<string name="Country.Swaziland">Swasiland</string>
-	<string name="Country.Sweden">Schweden</string>
-	<string name="Country.Switzerland">Schweiz</string>
-	<string name="Country.Syria">Syrien</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tadschikistan</string>
-	<string name="Country.Tanzania">Tansania</string>
-	<string name="Country.Thailand">Thailand</string>
-	<string name="Country.Thailand">Siam</string>
-	<string name="Country.The Gambia">Gambia</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tokelau Islands">Tokelau</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Transnistria">Transnistrien</string>
-	<string name="Country.Trinidad and Tobago">Trinidad und Tobago</string>
-	<string name="Country.Tunisia">Tunesien</string>
-	<string name="Country.Turkey">Türkei</string>
-	<string name="Country.Northern Cyprus">Nordzypern</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Turks- und Caicosinseln</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukraine</string>
-	<string name="Country.United Arab Emirates"> Vereinigte Arabische Emirate </string>
-	<string name="Country.United Kingdom">Vereinigtes Königreich</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Vereinigtes Königreich Großbritannien und Nordirland</string>
-	<string name="Country.United States of America">Vereinigte Staaten von Amerika</string>
-	<string name="Country.United States Virgin Islands">Amerikanische Jungferninseln</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Usbekistan</string>
-	<string name="Country.Vanuatu">Neue Hebriden</string>
-	<string name="Country.Vatican City">Vatikanstadt</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Wallis and Futuna">Wallis und Futuna</string>
-	<string name="Country.Western Sahara">West-Sahara</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Sambia</string>
-	<string name="Country.Zimbabwe">Simbabwe</string>
 </resources>
