--- a/Language/strings_el.xml
+++ b/Language/strings_el.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Φίλτρο</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Αγαπημένα</string>
@@ -18,220 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Είδος</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Διαγραφή</string>
   <string name="Webradio.Dialog.Search.Header">Αναζήτηση</string>
-	<string name="Country.Afghanistan">Αφγανιστάν</string>
-	<string name="Country.Albania">Αλβανία</string>
-	<string name="Country.Algeria">Αλγερία</string>
-	<string name="Country.Andorra">Ανδόρρα</string>
-	<string name="Country.Angola">Ανγκόλα</string>
-	<string name="Country.Argentina">Aργεντινή</string>
-	<string name="Country.Armenia">Αρμενία</string>
-	<string name="Country.Australia">Aυστραλία</string>
-	<string name="Country.Austria">Αυστρία</string>
-	<string name="Country.Azerbaijan">Αζερμπαϊτζάν</string>
-	<string name="Country.Bahamas">Μπαχάμες</string>
-	<string name="Country.Bahrain">Μπαχρέιν</string>
-	<string name="Country.Bangladesh">Μπανγκλαντές</string>
-	<string name="Country.Barbados">Μπαρμπάντος</string>
-	<string name="Country.Belarus">Λευκορωσία</string>
-	<string name="Country.Belgium">Βέλγιο</string>
-	<string name="Country.Belize">Μπελίζ</string>
-	<string name="Country.Benin">Μπενίν</string>
-	<string name="Country.Bhutan">Μπουτάν</string>
-	<string name="Country.Bolivia">Βολιβία</string>
-	<string name="Country.Bosnia and Herzegovina">Βοσνία και Ερζεγοβίνη</string>
-	<string name="Country.Botswana">Μποτσουάνα</string>
-	<string name="Country.Brazil">Βραζιλία</string>
-	<string name="Country.Brunei">Μπρουνέι</string>
-	<string name="Country.Bulgaria">Βουλγαρία</string>
-	<string name="Country.Burkina Faso">Μπουρκίνα Φάσο</string>
-	<string name="Country.Burkina Faso">Άνω Βόλτα</string>
-	<string name="Country.Burundi">Μπουρούντι</string>
-	<string name="Country.Cambodia">Καμπότζη</string>
-	<string name="Country.Cameroon">Καμερούν</string>
-	<string name="Country.Canada">Καναδάς</string>
-	<string name="Country.Cape Verde">Πράσινο Ακρωτήριο</string>
-	<string name="Country.Central African Republic">Κεντροαφρικανική Δημοκρατία</string>
-	<string name="Country.Chad">Τσαντ</string>
-	<string name="Country.Chile">Χιλή</string>
-	<string name="Country.China">Κίνα</string>
-	<string name="Country.Colombia">Κολομβία</string>
-	<string name="Country.Comoros">Κομόρες</string>
-	<string name="Country.Costa Rica">Κόστα Ρίκα</string>
-	<string name="Country.Côte d'Ivoire">Ακτή Ελεφαντοστού</string>
-	<string name="Country.Croatia">Κροατία</string>
-	<string name="Country.Cuba">Κούβα</string>
-	<string name="Country.Cyprus">Κύπρος</string>
-	<string name="Country.Czech Republic">Τσεχία</string>
-	<string name="Country.Denmark">Δανία</string>
-	<string name="Country.Djibouti">Τζιμπουτί</string>
-	<string name="Country.Dominica">Ντομίνικα</string>
-	<string name="Country.Dominican Republic">Δομινικανή Δημοκρατία</string>
-	<string name="Country.East Timor">Ανατολικό Τιμόρ</string>
-	<string name="Country.Ecuador">Ισημερινός</string>
-	<string name="Country.Egypt">Αίγυπτος</string>
-	<string name="Country.El Salvador">Ελ Σαλβαδόρ</string>
-	<string name="Country.Equatorial Guinea">Ισημερινή Γουινέα</string>
-	<string name="Country.Eritrea">Ερυθραία</string>
-	<string name="Country.Estonia">Εσθονία</string>
-	<string name="Country.Ethiopia">Αιθιοπία</string>
-	<string name="Country.Ethiopia">Αβυσσινία</string>
-	<string name="Country.Faroe Islands">Νήσοι Φερόες</string>
-	<string name="Country.Fiji">Φίτζι</string>
-	<string name="Country.Finland">Φινλανδία</string>
-	<string name="Country.France">Γαλλία</string>
-	<string name="Country.French Southern and Antarctic Lands">Γαλλικά νότια και ανταρκτικά εδάφη</string>
-	<string name="Country.Gabon">Γκαμπόν</string>
-	<string name="Country.Georgia">Γεωργία</string>
-	<string name="Country.Germany">Γερμανία</string>
-	<string name="Country.Ghana">Γκάνα</string>
-	<string name="Country.Greenland">Γροιλανδία</string>
-	<string name="Country.Grenada">Γρανάδα</string>
-	<string name="Country.Guam">Γκουάμ</string>
-	<string name="Country.Guatemala">Γουατεμάλα</string>
-	<string name="Country.Guinea">Γουινέα</string>
-	<string name="Country.Guinea-Bissau">Gouinéa-Bisáou</string>
-	<string name="Country.Guyana">Γουιάνα</string>
-	<string name="Country.Haiti">Αϊτή</string>
-	<string name="Country.Holland">Ολλανδία</string>
-	<string name="Country.Holy See">Αγία Έδρα</string>
-	<string name="Country.Honduras">Ονδούρα</string>
-	<string name="Country.Hong Kong">Χονγκ Κονγκ</string>
-	<string name="Country.Hungary">Ουγγαρία</string>
-	<string name="Country.Iceland">Ισλανδία</string>
-	<string name="Country.India">Ινδία</string>
-	<string name="Country.Indonesia">Ινδονησία</string>
-	<string name="Country.Iran">Ιράν</string>
-	<string name="Country.Iraq">Ιράκ</string>
-	<string name="Country.Ireland">Ιρλανδία</string>
-	<string name="Country.Israel">Ισραήλ</string>
-	<string name="Country.Italy">Ιταλία</string>
-	<string name="Country.Jamaica">Ιαμαϊκή</string>
-	<string name="Country.Japan">Ιαπωνία</string>
-	<string name="Country.Jordan">Ιορδανία</string>
-	<string name="Country.Kazakhstan">Καζακστάν</string>
-	<string name="Country.Kenya">Κένυα</string>
-	<string name="Country.Kiribati">Κιριμπάτι</string>
-	<string name="Country.Korea">Κορέα</string>
-	<string name="Country.Kuwait">Κουβέιτ</string>
-	<string name="Country.Kyrgyzstan">Κιργιζιστάν</string>
-	<string name="Country.Laos">Λάος</string>
-	<string name="Country.Latvia">Λεττονία</string>
-	<string name="Country.Lebanon">Λίβανος</string>
-	<string name="Country.Lesotho">Λεσόθο</string>
-	<string name="Country.Liberia">Λιβερία</string>
-	<string name="Country.Libya">Λιβύη</string>
-	<string name="Country.Liechtenstein">Λίχτενσταϊν</string>
-	<string name="Country.Lithuania">Λιθουανία</string>
-	<string name="Country.Luxembourg">Λουξεμβούργο</string>
-	<string name="Country.Macau">Μακάου</string>
-	<string name="Country.Madagascar">Μαδαγασκάρη</string>
-	<string name="Country.Malawi">Μαλάουι</string>
-	<string name="Country.Malaysia">Μαλαισία</string>
-	<string name="Country.Maldives">Μαλδίβες</string>
-	<string name="Country.Malta">Μάλτα</string>
-	<string name="Country.Marshall Islands">Νήσοι Μάρσαλ</string>
-	<string name="Country.Martinique">Μαρτινίκα</string>
-	<string name="Country.Mauritania">Μαυριτανία</string>
-	<string name="Country.Mauritius">Μαυρίκιος</string>
-	<string name="Country.Mayotte">Μαγιότ</string>
-	<string name="Country.Mexico">Μεξικό</string>
-	<string name="Country.Federated States of Micronesia">Μικρονησία</string>
-	<string name="Country.Moldova">Μολδαβία</string>
-	<string name="Country.Monaco">Μονακό</string>
-	<string name="Country.Mongolia">Μογγολία</string>
-	<string name="Country.Montenegro">Μαυροβούνιο</string>
-	<string name="Country.Montserrat">Μοντσερράτ</string>
-	<string name="Country.Morocco">Μαρόκο</string>
-	<string name="Country.Mozambique">Μοζαμβίκη</string>
-	<string name="Country.Myanmar">Μυανμάρ</string>
-	<string name="Country.Myanmar">Βιρμανία</string>
-	<string name="Country.Namibia">Ναμίμπια</string>
-	<string name="Country.Nauru">Ναουρού</string>
-	<string name="Country.Nepal">Νεπάλ</string>
-	<string name="Country.Netherlands Antilles">Ολλανδικές Αντίλλες</string>
-	<string name="Country.Netherlands">Ολλανδία</string>
-	<string name="Country.New Caledonia">Νέα Καληδονία</string>
-	<string name="Country.New Zealand">Νέα Ζηλανδία</string>
-	<string name="Country.Nicaragua">Νικαράγουα</string>
-	<string name="Country.Niger">Νίγηρας</string>
-	<string name="Country.Nigeria">Νιγηρία</string>
-	<string name="Country.Niue">Νιούε</string>
-	<string name="Country.Norfolk Island">Νήσοι Νόρφολκ</string>
-	<string name="Country.North Korea">Βόρεια Κορέα</string>
-	<string name="Country.Northern Mariana Islands">Βόρειες Μαριάνες Νήσοι</string>
-	<string name="Country.Norway">Νορβηγία</string>
-	<string name="Country.Oman">Ομάν</string>
-	<string name="Country.Pakistan">Πακιστάν</string>
-	<string name="Country.Palau">Παλάου</string>
-	<string name="Country.Palestinian territories">Παλαιστίνη</string>
-	<string name="Country.Panama">Παναμάς</string>
-	<string name="Country.Papua New Guinea">Παπούα Νέα Γουινέα</string>
-	<string name="Country.Paraguay">Παραγουάη</string>
-	<string name="Country.Peru">Περού</string>
-	<string name="Country.Philippines">Φιλιππίνες</string>
-	<string name="Country.Pitcairn Islands">Νήσοι Πίτκαιρν</string>
-	<string name="Country.Poland">Πολωνία</string>
-	<string name="Country.Portugal">Πορτογαλία</string>
-	<string name="Country.Monaco">Πριγκηπάτο του Μονακό</string>
-	<string name="Country.Puerto Rico">Πουέρτο Ρίκο</string>
-	<string name="Country.Qatar">Κατάρ</string>
-	<string name="Country.Romania">Ρουμανία</string>
-	<string name="Country.Russia">Ρωσία</string>
-	<string name="Country.Rwanda">Ρουάντα</string>
-	<string name="Country.Saint Kitts and Nevis">Άγιος Κίττις και Νάβις</string>
-	<string name="Country.Saint Lucia">Αγία Λουκία</string>
-	<string name="Country.Saint Vincent and the Grenadines">Άγιος Βικέντιος και Γρεναδίνες</string>
-	<string name="Country.Samoa">Σαμόα</string>
-	<string name="Country.San Marino">Άγιος Μαρίνος</string>
-	<string name="Country.São Tomé and Príncipe">Άγιος Θωμάς και Πρίγκιπας</string>
-	<string name="Country.Saudi Arabia">Σαουδική Αραβία</string>
-	<string name="Country.Scotland">Σκοτία; Σκωτία</string>
-	<string name="Country.Senegal">Σενεγάλη</string>
-	<string name="Country.Serbia">Σερβία</string>
-	<string name="Country.Seychelles">Σεϋχέλλες</string>
-	<string name="Country.Sierra Leone">Σιέρα Λεόνε</string>
-	<string name="Country.Singapore">Σιγκαπούρη</string>
-	<string name="Country.Slovakia">Σλοβακία</string>
-	<string name="Country.Slovenia">Σλοβενία</string>
-	<string name="Country.Solomon Islands">Νήσοι Σολομώντα</string>
-	<string name="Country.Somalia">Σομαλία</string>
-	<string name="Country.South Africa">Νότιος Αφρική</string>
-	<string name="Country.South Korea">Νότια Κορέα</string>
-	<string name="Country.Spain">Ισπανία</string>
-	<string name="Country.Sri Lanka">Σρι Λάνκα</string>
-	<string name="Country.Sri Lanka">Κεϋλάνη</string>
-	<string name="Country.Sudan">Σουδάν</string>
-	<string name="Country.Suriname">Σουρινάμ</string>
-	<string name="Country.Swaziland">Σουαζιλάνδη</string>
-	<string name="Country.Sweden">Σουηδία</string>
-	<string name="Country.Switzerland">Ελβετία</string>
-	<string name="Country.Syria">Συρία</string>
-	<string name="Country.Free Area of the Republic of China">Ταϊβάν</string>
-	<string name="Country.Tajikistan">Τατζικιστάν</string>
-	<string name="Country.Tanzania">Τανζανία</string>
-	<string name="Country.Thailand">Ταϊλάνδη</string>
-	<string name="Country.The Gambia">Γκάμπια</string>
-	<string name="Country.Togo">Τόγκο</string>
-	<string name="Country.Tonga">Τόγκα</string>
-	<string name="Country.Trinidad and Tobago">Τρινιδάδ και Τομπάγκο</string>
-	<string name="Country.Tunisia">Τυνησία</string>
-	<string name="Country.Turkey">Τουρκία</string>
-	<string name="Country.Turkmenistan">Τουρκμενιστάν</string>
-	<string name="Country.Tuvalu">Τουβαλού</string>
-	<string name="Country.Uganda">Ουγκάντα</string>
-	<string name="Country.Ukraine">Ουκρανία</string>
-	<string name="Country.United Arab Emirates"> Inoména Araviká Emiráta </string>
-	<string name="Country.United Kingdom">Ηνωμένο Βασίλειο</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Ηνωμένο Βασίλειο της Μεγάλης Βρεταννίας και Βορείου Ιρλανδία</string>
-	<string name="Country.Uruguay">Ουρουγουάη</string>
-	<string name="Country.Uzbekistan">Ουζμπεκιστάν</string>
-	<string name="Country.Vanuatu">Βανουάτου</string>
-	<string name="Country.Vatican City">Πόλη του Βατικανού</string>
-	<string name="Country.Venezuela">Βενεζουέλα</string>
-	<string name="Country.Vietnam">Βιετνάμ</string>
-	<string name="Country.Wales">Ουαλία</string>
-	<string name="Country.Western Sahara">Δυτική Σαχάρα</string>
-	<string name="Country.Yemen">Υεμένη</string>
-	<string name="Country.Zambia">Ζάμπια</string>
-	<string name="Country.Zimbabwe">Ζιμπάμπουε</string>
 </resources>
