--- a/Language/strings_en.xml
+++ b/Language/strings_en.xml
@@ -1,7 +1,8 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="Webradio.MenuEntry">Webradio</string> 
 	<string name="Webradio.StateDisplayLabel">Webradio</string>
+
 	<string name="Webradio.Home.ScreenTitle">Webradio</string>
 	<string name="Webradio.Home.Menu.View">View</string>
 	<string name="Webradio.Home.Menu.ShowFilter">Filter</string>
@@ -12,10 +13,12 @@
 	<string name="Webradio.Home.Genres">Genres</string>
 	<string name="Webradio.Home.Bitrate">Bitrate</string>
 	<string name="Webradio.Home.Country">Country</string>
-	<string name="Webradio.Home.City">City</string>	
+	<string name="Webradio.Home.City">City</string>
+	
 	<string name="Webradio.Settings.ScreenTitle">Settings</string>
 	<string name="Webradio.Settings.Menu.Filter">Filter</string>
 	<string name="Webradio.Settings.Menu.Favorites">Favorites</string>
+
   <string name="Webradio.Settings.Streamlistupdate">Update the Streamlist</string>
   <string name="Webradio.Settings.Languageupdate">Update the Languages</string>
   <string name="Webradio.Settings.Automatically">Automatically</string>
@@ -24,12 +27,14 @@
   <string name="Webradio.Settings.Report">Report broken Station</string>
   <string name="Webradio.Settings.Online">Version Online</string>
   <string name="Webradio.Settings.Offline">Version Offline</string>
-  <string name="Webradio.Settings.Version">Version</string>  
+  <string name="Webradio.Settings.Version">Version</string>
+  
 	<string name="Webradio.Favorites.ScreenTitle">Favorites</string>
 	<string name="Webradio.Favorites.Add">Add</string>   
 	<string name="Webradio.Favorites.Delete">Delete</string>
 	<string name="Webradio.Favorites.Rename">Rename</string> 
-	<string name="Webradio.Favorites.Save">Save</string>  
+	<string name="Webradio.Favorites.Save">Save</string>
+  
 	<string name="Webradio.Filter.ScreenTitle">Filter</string>
   <string name="Webradio.Filter.Delete">Delete</string>
 	<string name="Webradio.Filter.Add">Add</string>
@@ -39,271 +44,32 @@
 	<string name="Webradio.Filter.Genres">Genres</string>
 	<string name="Webradio.Filter.Bitrate">Bitrate</string>
 	<string name="Webradio.Filter.Country">Country</string>
-	<string name="Webradio.Filter.City">City</string>	
+	<string name="Webradio.Filter.City">City</string>
+	
 	<string name="Webradio.Dialog.ShowFilter.Header">Show Filter</string>
   <string name="Webradio.Dialog.ShowFilter.ShowFilter">Show My Filter</string>
   <string name="Webradio.Dialog.ShowFilter.Country">Country</string>
   <string name="Webradio.Dialog.ShowFilter.City">City</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.ShowFilter.Bitrate">Bitrate</string>
-  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Temporary Quick Filter</string>	
+  <string name="Webradio.Dialog.ShowFilter.Quickfilter">Temporary Quick Filter</string>
+	
 	<string name="Webradio.Dialog.ImportFilter.Header">Import Filter</string>
+
   <string name="Webradio.Dialog.DeleteFilter.Header">Delete Filter</string>
-  <string name="Webradio.Dialog.DeleteFilter.Delete">Delete</string>  
+  <string name="Webradio.Dialog.DeleteFilter.Delete">Delete</string>
+  
   <string name="Webradio.Dialog.ShowFavorites.Header">Show Favorites</string>
-  <string name="Webradio.Dialog.ShowFavorites.SetFav">Added or Remove selected Stream from Favorites</string> 
-	<string name="Webradio.Dialog.ImportFavorites.Header">Import Filter</string>	
+  <string name="Webradio.Dialog.ShowFavorites.SetFav">Added or Remove selected Stream from Favorites</string>
+  
+	<string name="Webradio.Dialog.ImportFavorites.Header">Import Filter</string>
+	
 	<string name="Webradio.Dialog.Search.Header">Search</string>
+
   <string name="Webradio.Dialog.LoadUpdate.Header">Update the Streamlist</string>
   <string name="Webradio.Dialog.LoadUpdate.DownloadComplete">Download Complete</string>
   <string name="Webradio.Dialog.LoadUpdate.DownloadError">Download Error</string>
   <string name="Webradio.Dialog.LoadUpdate.Button">Start Update</string>
+
   <string name="Webradio.UIContributor.Listeners">Listeners:</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Åland Islands">Åland Islands</string>
-	<string name="Country.Albania">Albania</string>
-	<string name="Country.Algeria">Algeria</string>
-	<string name="Country.American Samoa">American Samoa</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Angola">Angola</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua and Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenia</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australia</string>
-	<string name="Country.Austria">Austria</string>
-	<string name="Country.Azerbaijan">Azerbaijan</string>
-	<string name="Country.Bahamas">Bahamas</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Belarus</string>
-	<string name="Country.Belgium">Belgium</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Bermuda">Bermuda</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnia and Herzegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brazil</string>
-	<string name="Country.British Virgin Islands">British Virgin Islands</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgaria</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Burma">Burma</string>
-	<string name="Country.Burundi">Burundi</string>
-	<string name="Country.Cambodia">Cambodia</string>
-	<string name="Country.Cameroon">Cameroon</string>
-	<string name="Country.Canada">Canada</string>
-	<string name="Country.Cape Verde">Cape Verde</string>
-	<string name="Country.Cayman Islands">Cayman Islands</string>
-	<string name="Country.Central African Republic">Central African Republic</string>
-	<string name="Country.Chad">Chad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">China</string>
-	<string name="Country.Christmas Island">Christmas Island</string>
-	<string name="Country.Cocos (Keeling) Islands">Cocos (Keeling) Islands</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Comoros</string>
-	<string name="Country.Cook Islands">Cook Islands</string>
-	<string name="Country.Costa Rica">Costa Rica</string>
-	<string name="Country.Côte d'Ivoire">Côte d'Ivoire</string>
-	<string name="Country.Croatia">Croatia</string>
-	<string name="Country.Cuba">Cuba</string>
-	<string name="Country.Cyprus">Cyprus</string>
-	<string name="Country.Czech Republic">Czech Republic</string>
-	<string name="Country.Denmark">Denmark</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.Dominican Republic">Dominican Republic</string>
-	<string name="Country.East Timor">East Timor</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egypt</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.England">England</string>
-	<string name="Country.Equatorial Guinea">Equatorial Guinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estonia</string>
-	<string name="Country.Ethiopia">Ethiopia</string>
-	<string name="Country.Falkland Islands">Falkland Islands</string>
-	<string name="Country.Faroe Islands">Faroe Islands</string>
-	<string name="Country.Fiji">Fiji</string>
-	<string name="Country.Finland">Finland</string>
-	<string name="Country.France">France</string>
-	<string name="Country.French Guiana">French Guiana</string>
-	<string name="Country.French Polynesia">French Polynesia</string>
-	<string name="Country.French Southern and Antarctic Lands">French Southern and Antarctic Lands</string>
-	<string name="Country.Gabon">Gabon</string>
-	<string name="Country.Georgia">Georgia</string>
-	<string name="Country.Germany">Germany</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Gibraltar">Gibraltar</string>
-	<string name="Country.Greece">Greece</string>
-	<string name="Country.Greenland">Greenland</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadeloupe</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Guyana">Guyana</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">Holy See</string>
-	<string name="Country.Honduras">Honduras</string>
-	<string name="Country.Hong Kong">Hong Kong</string>
-	<string name="Country.Hungary">Hungary</string>
-	<string name="Country.Iceland">Iceland</string>
-	<string name="Country.India">India</string>
-	<string name="Country.Indonesia">Indonesia</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iraq">Iraq</string>
-	<string name="Country.Ireland">Ireland</string>
-	<string name="Country.Israel">Israel</string>
-	<string name="Country.Italy">Italy</string>
-	<string name="Country.Jamaica">Jamaica</string>
-	<string name="Country.Japan">Japan</string>
-	<string name="Country.Jordan">Jordan</string>
-	<string name="Country.Kazakhstan">Kazakhstan</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Kiribati">Kiribati</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait">Kuwait</string>
-	<string name="Country.Kyrgyzstan">Kyrgyzstan</string>
-	<string name="Country.Laos">Laos</string>
-	<string name="Country.Latvia">Latvia</string>
-	<string name="Country.Lebanon">Lebanon</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Liberia</string>
-	<string name="Country.Libya">Libya</string>
-	<string name="Country.Liechtenstein">Liechtenstein</string>
-	<string name="Country.Lithuania">Lithuania</string>
-	<string name="Country.Luxembourg">Luxembourg</string>
-	<string name="Country.Macau">Macau</string>
-	<string name="Country.Republic of Macedonia">Republic of Macedonia</string>
-	<string name="Country.Madagascar">Madagascar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Maldives</string>
-	<string name="Country.Mali">Mali</string>
-	<string name="Country.Malta">Malta</string>
-	<string name="Country.Marshall Islands">Marshall Islands</string>
-	<string name="Country.Martinique">Martinique</string>
-	<string name="Country.Mauritania">Mauritania</string>
-	<string name="Country.Mauritius">Mauritius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexico</string>
-	<string name="Country.Federated States of Micronesia">Federated States of Micronesia</string>
-	<string name="Country.Moldova">Moldova</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongolia</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Montserrat">Montserrat</string>
-	<string name="Country.Morocco">Morocco</string>
-	<string name="Country.Mozambique">Mozambique</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Namibia">Namibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepal</string>
-	<string name="Country.Netherlands Antilles">Netherlands Antilles</string>
-	<string name="Country.Netherlands">Netherlands</string>
-	<string name="Country.New Caledonia">New Caledonia</string>
-	<string name="Country.New Zealand">New Zealand</string>
-	<string name="Country.Nicaragua">Nicaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Norfolk Island</string>
-	<string name="Country.North Korea">North Korea</string>
-	<string name="Country.Northern Mariana Islands">Northern Mariana Islands</string>
-	<string name="Country.Norway">Norway</string>
-	<string name="Country.Oman">Oman</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palau">Palau</string>
-	<string name="Country.Palestinian territories">Palestinian territories</string>
-	<string name="Country.Panama">Panama</string>
-	<string name="Country.Papua New Guinea">Papua New Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Persia">Persia</string>
-	<string name="Country.Peru">Peru</string>
-	<string name="Country.Philippines">Philippines</string>
-	<string name="Country.Pitcairn Islands">Pitcairn Islands</string>
-	<string name="Country.Poland">Poland</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Puerto Rico">Puerto Rico</string>
-	<string name="Country.Qatar">Qatar</string>
-	<string name="Country.Réunion">Réunion</string>
-	<string name="Country.Romania">Romania</string>
-	<string name="Country.Russia">Russia</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Helena">Saint Helena</string>
-	<string name="Country.Saint Kitts and Nevis">Saint Kitts and Nevis</string>
-	<string name="Country.Saint Lucia">Saint Lucia</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint Pierre and Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent and the Grenadines</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">São Tomé and Príncipe</string>
-	<string name="Country.Saudi Arabia">Saudi Arabia</string>
-	<string name="Country.Scotland">Scotland</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbia</string>
-	<string name="Country.Seychelles">Seychelles</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapore</string>
-	<string name="Country.Slovakia">Slovakia</string>
-	<string name="Country.Slovenia">Slovenia</string>
-	<string name="Country.Solomon Islands">Solomon Islands</string>
-	<string name="Country.Somalia">Somalia</string>
-	<string name="Country.South Africa">South Africa</string>
-	<string name="Country.South Georgia and South Sandwich Islands">South Georgia and South Sandwich Islands</string>
-	<string name="Country.South Korea">South Korea</string>
-	<string name="Country.South Ossetia">South Ossetia</string>
-	<string name="Country.South Sudan">South Sudan</string>
-	<string name="Country.Spain">Spain</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sudan">Sudan</string>
-	<string name="Country.Suriname">Suriname</string>
-	<string name="Country.Swaziland">Swaziland</string>
-	<string name="Country.Sweden">Sweden</string>
-	<string name="Country.Switzerland">Switzerland</string>
-	<string name="Country.Syria">Syria</string>
-	<string name="Country.Free Area of the Republic of China">Free Area of the Republic of China</string>
-	<string name="Country.Tajikistan">Tajikistan</string>
-	<string name="Country.Tanzania">Tanzania</string>
-	<string name="Country.Thailand">Thailand</string>
-	<string name="Country.The Gambia">The Gambia</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tokelau Islands">Tokelau Islands</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Transnistria">Transnistria</string>
-	<string name="Country.Trinidad and Tobago">Trinidad and Tobago</string>
-	<string name="Country.Tunisia">Tunisia</string>
-	<string name="Country.Turkey">Turkey</string>
-	<string name="Country.Northern Cyprus">Northern Cyprus</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Turks and Caicos Islands</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukraine</string>
-	<string name="Country.United Arab Emirates">United Arab Emirates</string>
-	<string name="Country.United Kingdom">United Kingdom</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">United Kingdom of Great Britain and Northern Ireland</string>
-	<string name="Country.United States of America">United States of America</string>
-	<string name="Country.United States Virgin Islands">United States Virgin Islands</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vanuatu">Vanuatu</string>
-	<string name="Country.Vatican City">Vatican City</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Wallis and Futuna">Wallis and Futuna</string>
-	<string name="Country.Western Sahara">Western Sahara</string>
-	<string name="Country.Yemen">Yemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
