--- a/Language/strings_et.xml
+++ b/Language/strings_et.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Lemmikud</string>
@@ -18,231 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Žanr</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Kustuta</string>
   <string name="Webradio.Dialog.Search.Header">Otsi</string>
-	<string name="Country.Afghanistan">Afganistan</string>
-	<string name="Country.Åland Islands">Ahvenamaa</string>
-	<string name="Country.Albania">Albaania</string>
-	<string name="Country.Algeria">Alžeeria</string>
-	<string name="Country.American Samoa">Ameerika Samoa</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua ja Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armeenia</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Austraalia</string>
-	<string name="Country.Austria">Austria</string>
-	<string name="Country.Azerbaijan">Aserbaidžaan</string>
-	<string name="Country.Bahamas">Bahama</string>
-	<string name="Country.Bahrain">Bahrein</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Valgevene</string>
-	<string name="Country.Belgium">Belgia</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Benin">Dahomee</string>
-	<string name="Country.Bermuda">Bermuda</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Boliivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnia ja Hertsegoviina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasiilia</string>
-	<string name="Country.British Virgin Islands">Briti Neitsisaared</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgaaria</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Cambodia">Kambodža</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Roheneemesaared</string>
-	<string name="Country.Cayman Islands">Kaimanisaared</string>
-	<string name="Country.Central African Republic">Kesk-Aafrika Vabariik</string>
-	<string name="Country.Chad">Tšaad</string>
-	<string name="Country.Chile">Tšiili</string>
-	<string name="Country.China">Hiina</string>
-	<string name="Country.Christmas Island">Jõulusaar</string>
-	<string name="Country.Cocos (Keeling) Islands">Kookossaared</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Komoorid</string>
-	<string name="Country.Cook Islands">Cooki saared</string>
-	<string name="Country.Costa Rica">Costa Rica</string>
-	<string name="Country.Côte d'Ivoire">Elevandiluurannik</string>
-	<string name="Country.Croatia">Horvaatia</string>
-	<string name="Country.Cuba">Kuuba</string>
-	<string name="Country.Cyprus">Küpros</string>
-	<string name="Country.Czech Republic">Tšehhi</string>
-	<string name="Country.Denmark">Taani</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.Dominican Republic">Dominikaani Vabariik</string>
-	<string name="Country.East Timor">Ida-Timor</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egiptus</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.Equatorial Guinea">Ekvatoriaal-Guinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Eesti</string>
-	<string name="Country.Ethiopia">Etioopia</string>
-	<string name="Country.Falkland Islands">Falklandi saared</string>
-	<string name="Country.Faroe Islands">Fääri saared</string>
-	<string name="Country.Fiji">Fidži</string>
-	<string name="Country.Finland">Soome</string>
-	<string name="Country.France">Prantsusmaa</string>
-	<string name="Country.French Guiana">Prantsuse Guajaana</string>
-	<string name="Country.French Polynesia">Prantsuse Polüneesia</string>
-	<string name="Country.French Southern and Antarctic Lands">Prantsuse Antarktika ja Lõunaalad</string>
-	<string name="Country.Georgia">Gruusia</string>
-	<string name="Country.Germany">Saksamaa</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Greece">Kreeka</string>
-	<string name="Country.Greenland">Gröönimaa</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadeloupe</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">Püha Tool</string>
-	<string name="Country.Hong Kong">Hong Kong</string>
-	<string name="Country.Hungary">Ungari</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">India</string>
-	<string name="Country.Indonesia">Indoneesia</string>
-	<string name="Country.Iran">Iraan</string>
-	<string name="Country.Iraq">Iraak</string>
-	<string name="Country.Ireland">Iirimaa</string>
-	<string name="Country.Israel">Iisrael</string>
-	<string name="Country.Italy">Itaalia</string>
-	<string name="Country.Japan">Jaapan</string>
-	<string name="Country.Jordan">Jordaania</string>
-	<string name="Country.Kazakhstan">Kasahstan</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuveit </string>
-	<string name="Country.Kyrgyzstan">Kõrgõzstan</string>
-	<string name="Country.Latvia">Läti</string>
-	<string name="Country.Lebanon">Liibanon</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Libeeria</string>
-	<string name="Country.Libya">Liibüa</string>
-	<string name="Country.Lithuania">Leedu</string>
-	<string name="Country.Luxembourg">Luksemburg</string>
-	<string name="Country.Macau">Aomen</string>
-	<string name="Country.Republic of Macedonia">Makedoonia</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaisia</string>
-	<string name="Country.Maldives">Maldiivid</string>
-	<string name="Country.Marshall Islands">Marshalli Saared</string>
-	<string name="Country.Mauritania">Mauritaania</string>
-	<string name="Country.Mauritius">Mauritius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mehhiko</string>
-	<string name="Country.Federated States of Micronesia">Mikroneesia</string>
-	<string name="Country.Moldova">Moldova</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Montserrat">Montserrat</string>
-	<string name="Country.Morocco">Maroko</string>
-	<string name="Country.Mozambique">Mosambiik</string>
-	<string name="Country.Myanmar">Birma</string>
-	<string name="Country.Namibia">Namiibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepal</string>
-	<string name="Country.Netherlands Antilles">Hollandi Antillid</string>
-	<string name="Country.Netherlands">Holland</string>
-	<string name="Country.New Caledonia">Uus-Kaledoonia</string>
-	<string name="Country.New Zealand">Uus-Meremaa</string>
-	<string name="Country.Nicaragua">Nicaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Norfolk</string>
-	<string name="Country.North Korea">Põhja-Korea</string>
-	<string name="Country.Northern Mariana Islands">Põhja-Mariaanid</string>
-	<string name="Country.Norway">Norra</string>
-	<string name="Country.Oman">Omaan</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palau">Belau</string>
-	<string name="Country.Palestinian territories">Palestiina</string>
-	<string name="Country.Papua New Guinea">Paapua Uus-Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Peru">Peruu</string>
-	<string name="Country.Philippines">Filipiinid</string>
-	<string name="Country.Pitcairn Islands">Pitcairn</string>
-	<string name="Country.Poland">Poola</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Monaco Vürstiriik</string>
-	<string name="Country.Puerto Rico">Puerto Rico</string>
-	<string name="Country.Qatar">Katar</string>
-	<string name="Country.Réunion">Réunion</string>
-	<string name="Country.Romania">Rumeenia</string>
-	<string name="Country.Russia">Venemaa</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Kitts and Nevis">Saint Kitts ja Nevis</string>
-	<string name="Country.Saint Lucia">Saint Lucia</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint-Pierre ja Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent ja Grenadiinid</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">São Tomé ja Príncipe</string>
-	<string name="Country.Saudi Arabia">Saudi Araabia</string>
-	<string name="Country.Scotland">Šotimaa</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbia</string>
-	<string name="Country.Seychelles">Seišellid</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapur</string>
-	<string name="Country.Slovakia">Slovakkia</string>
-	<string name="Country.Slovenia">Sloveenia</string>
-	<string name="Country.Solomon Islands">Saalomoni Saared</string>
-	<string name="Country.Somalia">Somaalia</string>
-	<string name="Country.South Africa">Lõuna-Aafrika Vabariik</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Lõuna-Georgia ja Lõuna-Sandwichi saared</string>
-	<string name="Country.South Korea">Lõuna-Korea</string>
-	<string name="Country.South Ossetia">Lõuna-Osseetia</string>
-	<string name="Country.Spain">Hispaania</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sudan">Sudaan</string>
-	<string name="Country.Suriname">Suriname</string>
-	<string name="Country.Swaziland">Svaasimaa</string>
-	<string name="Country.Sweden">Rootsi</string>
-	<string name="Country.Switzerland">Šveits</string>
-	<string name="Country.Syria">Süüria</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tadžikistan</string>
-	<string name="Country.Tanzania">Tansaania</string>
-	<string name="Country.Thailand">Tai</string>
-	<string name="Country.The Gambia">Gambia</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tokelau Islands">Tokelau</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Transnistria">Transnistria</string>
-	<string name="Country.Trinidad and Tobago">Trinidad ja Tobago</string>
-	<string name="Country.Tunisia">Tuneesia</string>
-	<string name="Country.Turkey">Türgi</string>
-	<string name="Country.Northern Cyprus">Põhja-Küpros</string>
-	<string name="Country.Turkmenistan">Türkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Turks ja Caicos</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukraina</string>
-	<string name="Country.United Arab Emirates"> Araabia Ühendemiraadid </string>
-	<string name="Country.United Kingdom">Suurbritannia</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Suurbritannia ja Põhja-Iiri Ühendkuningriik</string>
-	<string name="Country.United States of America">Ameerika Ühendriigid</string>
-	<string name="Country.United States Virgin Islands">USA Neitsisaared</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Usbekistan</string>
-	<string name="Country.Vatican City">Vatikan</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Wallis and Futuna">Wallis ja Futuna</string>
-	<string name="Country.Western Sahara">Lääne-Sahara</string>
-	<string name="Country.Yemen">Jeemen</string>
-	<string name="Country.Zambia">Sambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
