--- a/Language/strings_he.xml
+++ b/Language/strings_he.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">מסנן</string>
   <string name="Webradio.Home.Menu.ShowFavorites">מועדפים</string>
@@ -18,249 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">ז\'אנר</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">מחק</string>
   <string name="Webradio.Dialog.Search.Header">חיפוש</string>
-	<string name="Country.Afghanistan">אפגניסטן</string>
-	<string name="Country.Åland Islands">איי אולנד</string>
-	<string name="Country.Albania">אלבניה</string>
-	<string name="Country.Algeria">אלג׳יריה</string>
-	<string name="Country.American Samoa">סמואה האמריקנית</string>
-	<string name="Country.Andorra">אנדורה</string>
-	<string name="Country.Angola">אנגולה</string>
-	<string name="Country.Anguilla">אנגווילה</string>
-	<string name="Country.Antigua and Barbuda">אנטיגואה וברבודה</string>
-	<string name="Country.Argentina">ארגנטינה</string>
-	<string name="Country.Armenia">ארמניה</string>
-	<string name="Country.Aruba">ארובה</string>
-	<string name="Country.Australia">אוסטרליה</string>
-	<string name="Country.Austria">אוסטריה</string>
-	<string name="Country.Azerbaijan">אזרבייג'ן</string>
-	<string name="Country.Bahamas">בהאמה</string>
-	<string name="Country.Bahrain">בחריין</string>
-	<string name="Country.Bangladesh">בנגלדש</string>
-	<string name="Country.Barbados">ברבדוס</string>
-	<string name="Country.Belarus">Belarus</string>
-	<string name="Country.Belgium">בלגיה</string>
-	<string name="Country.Belize">בליז</string>
-	<string name="Country.Benin">בנין</string>
-	<string name="Country.Bermuda">ברמודה</string>
-	<string name="Country.Bhutan">בוטאן</string>
-	<string name="Country.Bolivia">בוליביה</string>
-	<string name="Country.Bosnia and Herzegovina">בוסניה הרצוגובינה</string>
-	<string name="Country.Botswana">Botsvana</string>
-	<string name="Country.Brazil">ברזיל</string>
-	<string name="Country.British Virgin Islands">איי הבתולה הבריטיים</string>
-	<string name="Country.Brunei">ברוניי</string>
-	<string name="Country.Bulgaria">בולגריה</string>
-	<string name="Country.Burkina Faso">בורקינה פאסו</string>
-	<string name="Country.Burundi">בורונדי</string>
-	<string name="Country.Cambodia">קמבודיה</string>
-	<string name="Country.Cameroon">קמרון</string>
-	<string name="Country.Canada">קנדה</string>
-	<string name="Country.Cape Verde">כף ורדה</string>
-	<string name="Country.Cayman Islands">איי קיימן</string>
-	<string name="Country.Central African Republic">הרפובליקה המרכז אפריקאית</string>
-	<string name="Country.Chad">צ׳אד</string>
-	<string name="Country.Chile">צ׳ילה</string>
-	<string name="Country.China">סין</string>
-	<string name="Country.Christmas Island">אי חג המולד</string>
-	<string name="Country.Cocos (Keeling) Islands">איי קוקוס</string>
-	<string name="Country.Colombia">קולומביה</string>
-	<string name="Country.Comoros">קומורו</string>
-	<string name="Country.Cook Islands">איי קוק</string>
-	<string name="Country.Costa Rica">קוסטה ריקה</string>
-	<string name="Country.Côte d'Ivoire">Khof-ha'Shenhav</string>
-	<string name="Country.Croatia">קרואטיה</string>
-	<string name="Country.Cuba">קובה</string>
-	<string name="Country.Cyprus">קפריסין</string>
-	<string name="Country.Czech Republic">צ'כיה</string>
-	<string name="Country.Denmark">דנמרק</string>
-	<string name="Country.Djibouti">ג'יבוטי</string>
-	<string name="Country.Dominica">דומיניקה</string>
-	<string name="Country.Dominican Republic">הרפובליקה הדומיניקנית</string>
-	<string name="Country.East Timor">מזרח טימור</string>
-	<string name="Country.Ecuador">אקוודור</string>
-	<string name="Country.Egypt">מצרים</string>
-	<string name="Country.El Salvador">El-salvador</string>
-	<string name="Country.Equatorial Guinea">גינאה המשוונית</string>
-	<string name="Country.Eritrea">אריתריאה</string>
-	<string name="Country.Estonia">אסטוניה</string>
-	<string name="Country.Ethiopia">אתיופיה</string>
-	<string name="Country.Ethiopia">חבש</string>
-	<string name="Country.Falkland Islands">איי פוקלנד</string>
-	<string name="Country.Faroe Islands">איי פארו</string>
-	<string name="Country.Fiji">פיג'י</string>
-	<string name="Country.Finland">פינלנד</string>
-	<string name="Country.France">צרפת</string>
-	<string name="Country.French Guiana">גיאנה הצרפתית</string>
-	<string name="Country.French Polynesia">פולינזיה הצרפתית</string>
-	<string name="Country.French Southern and Antarctic Lands">האיים הדרומיים והאנטקרטיקים הצרפתיים</string>
-	<string name="Country.Gabon">גאבון</string>
-	<string name="Country.Georgia">גרוזיה</string>
-	<string name="Country.Germany">גרמניה</string>
-	<string name="Country.Ghana">גאנה</string>
-	<string name="Country.Gibraltar">ג'יברלטר</string>
-	<string name="Country.Greece">יוון</string>
-	<string name="Country.Grenada">גרנדה</string>
-	<string name="Country.Guadeloupe">גואדלופ</string>
-	<string name="Country.Guam">גואם</string>
-	<string name="Country.Guatemala">גואטמלה</string>
-	<string name="Country.Guinea">גיניאה</string>
-	<string name="Country.Guinea-Bissau">גיניאה ביסאו</string>
-	<string name="Country.Guyana">גיאנה</string>
-	<string name="Country.Haiti">האיטי</string>
-	<string name="Country.Holland">הולנד</string>
-	<string name="Country.Honduras">הונדורס</string>
-	<string name="Country.Hong Kong">הונג-קונג</string>
-	<string name="Country.Hungary">הונגריה</string>
-	<string name="Country.Iceland">איסלנד</string>
-	<string name="Country.India">הודו</string>
-	<string name="Country.Indonesia">אינדונזיה</string>
-	<string name="Country.Iran">אירן</string>
-	<string name="Country.Iraq">עיראק</string>
-	<string name="Country.Ireland">אירלנד</string>
-	<string name="Country.Israel">ישראל</string>
-	<string name="Country.Italy">איטליה</string>
-	<string name="Country.Jamaica">ג'אמייקה</string>
-	<string name="Country.Japan">יפן</string>
-	<string name="Country.Kazakhstan">קזחסטן</string>
-	<string name="Country.Kenya">קניה</string>
-	<string name="Country.Kiribati">קיריבטי</string>
-	<string name="Country.Korea">קוריאה</string>
-	<string name="Country.Kuwait">כווית</string>
-	<string name="Country.Kyrgyzstan">קירגיזסטן</string>
-	<string name="Country.Laos">לאוס</string>
-	<string name="Country.Latvia">לטביה</string>
-	<string name="Country.Lebanon">לבנון</string>
-	<string name="Country.Lesotho">לסוטו</string>
-	<string name="Country.Liberia">ליבריה</string>
-	<string name="Country.Libya">לוב</string>
-	<string name="Country.Liechtenstein">ליכטנשטיין</string>
-	<string name="Country.Luxembourg">לוקסמבורג</string>
-	<string name="Country.Macau">מקאו</string>
-	<string name="Country.Republic of Macedonia">מקדוניה</string>
-	<string name="Country.Madagascar">מדגסקר</string>
-	<string name="Country.Malawi">מלאווי</string>
-	<string name="Country.Malaysia">מלזיה</string>
-	<string name="Country.Maldives">האיים המלדיבים</string>
-	<string name="Country.Mali">מאלי</string>
-	<string name="Country.Malta">מלטה</string>
-	<string name="Country.Marshall Islands">איי מרשל</string>
-	<string name="Country.Martinique">מרטיניק</string>
-	<string name="Country.Mauritania">מאוריטניה</string>
-	<string name="Country.Mauritius">מאוריציוס</string>
-	<string name="Country.Mayotte">מיוט</string>
-	<string name="Country.Mexico">מקסיקו</string>
-	<string name="Country.Federated States of Micronesia">מיקרונזיה</string>
-	<string name="Country.Moldova">מולדובה</string>
-	<string name="Country.Monaco">מונקו</string>
-	<string name="Country.Mongolia">מונגוליה</string>
-	<string name="Country.Montenegro">מונטנגרו</string>
-	<string name="Country.Montserrat">מונטסרט</string>
-	<string name="Country.Morocco">מרוקו</string>
-	<string name="Country.Mozambique">מוזמביק</string>
-	<string name="Country.Myanmar">מיאנמר</string>
-	<string name="Country.Myanmar">בורמה</string>
-	<string name="Country.Namibia">נמיביה</string>
-	<string name="Country.Nauru">נאורו</string>
-	<string name="Country.Nepal">נפאל</string>
-	<string name="Country.Netherlands Antilles">אנטילים הולנדים</string>
-	<string name="Country.Netherlands">הולנד</string>
-	<string name="Country.New Caledonia">Kaldonia</string>
-	<string name="Country.New Zealand">Nyu-Ziland</string>
-	<string name="Country.Nicaragua">ניקראגווה</string>
-	<string name="Country.Niger">ניז'ר</string>
-	<string name="Country.Nigeria">ניגריה</string>
-	<string name="Country.Niue">ניואה</string>
-	<string name="Country.Norfolk Island">איי נורפולק</string>
-	<string name="Country.North Korea">קוריאה הצפונית</string>
-	<string name="Country.Northern Mariana Islands">איי מריאנה הצפוניים</string>
-	<string name="Country.Norway">נורבגיה</string>
-	<string name="Country.Oman">עומן</string>
-	<string name="Country.Pakistan">פקיסטן</string>
-	<string name="Country.Palau">פלאו</string>
-	<string name="Country.Palestinian territories">הרשות הפלסטינית</string>
-	<string name="Country.Panama">פנמה</string>
-	<string name="Country.Papua New Guinea">פפואה גינאה החדשה</string>
-	<string name="Country.Paraguay">פאראגוואי</string>
-	<string name="Country.Peru">פרו</string>
-	<string name="Country.Philippines">פיליפינים</string>
-	<string name="Country.Pitcairn Islands">איי פיטקרן</string>
-	<string name="Country.Poland">פולין</string>
-	<string name="Country.Portugal">פורטוגל</string>
-	<string name="Country.Monaco">מונקו</string>
-	<string name="Country.Puerto Rico">Puerto-riko</string>
-	<string name="Country.Qatar">קטאר</string>
-	<string name="Country.Réunion">ראוניון</string>
-	<string name="Country.Romania">רומניה</string>
-	<string name="Country.Russia">רוסיה</string>
-	<string name="Country.Rwanda">רואנדה</string>
-	<string name="Country.Saint Helena">סנט הלנה</string>
-	<string name="Country.Saint Kitts and Nevis">סנט קיטס ונוויס</string>
-	<string name="Country.Saint Lucia">סנט לוסיה</string>
-	<string name="Country.Saint Pierre and Miquelon">סן פייר ומיקלון</string>
-	<string name="Country.Saint Vincent and the Grenadines">סנט וינסנט והגרנדינים</string>
-	<string name="Country.Samoa">סמואה</string>
-	<string name="Country.Samoa">סמואה</string>
-	<string name="Country.San Marino">סן מרינו</string>
-	<string name="Country.São Tomé and Príncipe">סאו טומה ופרינסיפה</string>
-	<string name="Country.Saudi Arabia">ערב הסעודית</string>
-	<string name="Country.Scotland">סקוטלנד</string>
-	<string name="Country.Senegal">סנגל</string>
-	<string name="Country.Serbia">סרביה</string>
-	<string name="Country.Seychelles">סיישל</string>
-	<string name="Country.Sierra Leone">סיירה לאונה</string>
-	<string name="Country.Singapore">סינגפור</string>
-	<string name="Country.Slovakia">סלובקיה</string>
-	<string name="Country.Slovenia">סלובניה</string>
-	<string name="Country.Solomon Islands">Iyey Shlomo</string>
-	<string name="Country.Somalia">סומליה</string>
-	<string name="Country.South Africa">Drom-Afrika</string>
-	<string name="Country.South Georgia and South Sandwich Islands">איי ג'ורג'יה הדרומיים ואיי סנדוויץ' הדרומיים</string>
-	<string name="Country.South Korea">דרום קוריאה</string>
-	<string name="Country.South Ossetia">דרום אוסטיה</string>
-	<string name="Country.Spain">ספרד</string>
-	<string name="Country.Sri Lanka">סרי לנקה</string>
-	<string name="Country.Sri Lanka">סיילון</string>
-	<string name="Country.Sudan">סודאן</string>
-	<string name="Country.Suriname">סורינאם</string>
-	<string name="Country.Suriname">גיאנה ההולנדית</string>
-	<string name="Country.Swaziland">סוואזילנד</string>
-	<string name="Country.Sweden">שוודיה</string>
-	<string name="Country.Switzerland">שווייץ</string>
-	<string name="Country.Syria">סוריה</string>
-	<string name="Country.Free Area of the Republic of China">טאיוואן or טיוואן</string>
-	<string name="Country.Tajikistan">טאג'יקיסטן</string>
-	<string name="Country.Tanzania">טנזניה</string>
-	<string name="Country.Thailand">תאילנד</string>
-	<string name="Country.Thailand">סיאם</string>
-	<string name="Country.The Gambia">גמביה</string>
-	<string name="Country.Togo">טוגו</string>
-	<string name="Country.Tokelau Islands">טוקלאו</string>
-	<string name="Country.Tonga">טונגה</string>
-	<string name="Country.Transnistria">Transnistriya</string>
-	<string name="Country.Trinidad and Tobago">טרינידד וטובגו</string>
-	<string name="Country.Tunisia">טוניסיה or תוניסיה</string>
-	<string name="Country.Turkey">תורכיה or טורקיה</string>
-	<string name="Country.Northern Cyprus">צפון קפריסין</string>
-	<string name="Country.Turkmenistan">טורקמניסטן</string>
-	<string name="Country.Turks and Caicos Islands">איי טרקס וקייקוס</string>
-	<string name="Country.Tuvalu">טובאלו</string>
-	<string name="Country.Uganda">אוגנדה</string>
-	<string name="Country.Ukraine">אוקראינה</string>
-	<string name="Country.United Arab Emirates">איחוד העמירויות הערביות</string>
-	<string name="Country.United Kingdom">בריטניה</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">הממלכה המאוחדת של בריטניה הגדולה וצפון אירלנד</string>
-	<string name="Country.United States of America">ארצות הברית של אמריקה</string>
-	<string name="Country.United States Virgin Islands">איי הבתולה של ארצות הברית</string>
-	<string name="Country.Uruguay">אורוגוואי</string>
-	<string name="Country.Uzbekistan">אוזבקיסטן</string>
-	<string name="Country.Vanuatu">וונואטו</string>
-	<string name="Country.Vatican City">רית הוותיקן</string>
-	<string name="Country.Venezuela">ונצואלה</string>
-	<string name="Country.Vietnam">ויאטנאם</string>
-	<string name="Country.Wales">ווילס</string>
-	<string name="Country.Wallis and Futuna">ווליס ופוטונה</string>
-	<string name="Country.Western Sahara">סהרה המערבית</string>
-	<string name="Country.Yemen">תימן</string>
-	<string name="Country.Zambia">זמביה</string>
-	<string name="Country.Zimbabwe">זימבבואה</string>
 </resources>
