--- a/Language/strings_hr.xml
+++ b/Language/strings_hr.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.Settings">Postavke</string>
   <string name="Webradio.Home.Menu.Search">Traži</string>
@@ -8,121 +8,4 @@
   <string name="Webradio.Filter.Clear">Vedro</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Žanr</string>
   <string name="Webradio.Dialog.Search.Header">Traži</string>
-	<string name="Country.Afghanistan">Afganistan</string>
-	<string name="Country.Albania">Albanija</string>
-	<string name="Country.Algeria">Alžir</string>
-	<string name="Country.American Samoa">Američka Samoa</string>
-	<string name="Country.Andorra">Andora</string>
-	<string name="Country.Anguilla">Angvila</string>
-	<string name="Country.Antigua and Barbuda">Antigva i Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenija</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australija</string>
-	<string name="Country.Austria">Austrija</string>
-	<string name="Country.Azerbaijan">Azerbajdžan</string>
-	<string name="Country.Bahamas">Bahami</string>
-	<string name="Country.Bahrain">Bahrein</string>
-	<string name="Country.Bangladesh">Bangladeš</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Bjelorusija</string>
-	<string name="Country.Belgium">Belgija</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Bhutan">Butan</string>
-	<string name="Country.Bolivia">Bolivija</string>
-	<string name="Country.Bosnia and Herzegovina">Bosna i Hercegovina</string>
-	<string name="Country.Botswana">Bocvana</string>
-	<string name="Country.Brazil">Brazil</string>
-	<string name="Country.British Virgin Islands">Britanski Djevičanski otoci</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bugarska</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Cambodia">Kambodža</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Kapverdski otoci</string>
-	<string name="Country.Cayman Islands">Kajmanski otoci</string>
-	<string name="Country.Chad">Čad</string>
-	<string name="Country.Chile">Čile</string>
-	<string name="Country.China">Kina</string>
-	<string name="Country.Christmas Island">Božićni otok</string>
-	<string name="Country.Colombia">Kolumbija</string>
-	<string name="Country.Comoros">Komori</string>
-	<string name="Country.Costa Rica">Kostarika</string>
-	<string name="Country.Côte d'Ivoire">Bjelokosna Obala</string>
-	<string name="Country.Côte d'Ivoire">Obala Bjelokosti</string>
-	<string name="Country.Croatia">Hrvatska</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Cipar</string>
-	<string name="Country.Czech Republic">Češka</string>
-	<string name="Country.Denmark">Danska</string>
-	<string name="Country.Djibouti">Džibuti</string>
-	<string name="Country.Dominica">Dominika</string>
-	<string name="Country.Dominican Republic">Dominikanska Republika</string>
-	<string name="Country.East Timor">Istočni Timor</string>
-	<string name="Country.Ecuador">Ekvador</string>
-	<string name="Country.Egypt">Egipat</string>
-	<string name="Country.Equatorial Guinea">Ekvatorska Gvineja</string>
-	<string name="Country.Eritrea">Eritreja</string>
-	<string name="Country.Estonia">Estonija</string>
-	<string name="Country.Ethiopia">Etiopija</string>
-	<string name="Country.Fiji">Fidži</string>
-	<string name="Country.Finland">Finska</string>
-	<string name="Country.France">Francuska</string>
-	<string name="Country.Georgia">Gruzija</string>
-	<string name="Country.Germany">Njemačka</string>
-	<string name="Country.Greece">Grčka</string>
-	<string name="Country.Greenland">Grenland</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Holandija</string>
-	<string name="Country.Holy See">Sveta Stolica</string>
-	<string name="Country.Hungary">Mađarska</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">Indija</string>
-	<string name="Country.Indonesia">Indonezija</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iran">Perzija</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Irska</string>
-	<string name="Country.Israel">Izrael</string>
-	<string name="Country.Italy">Italija</string>
-	<string name="Country.Jamaica">Jamajka</string>
-	<string name="Country.Jordan">Jordan</string>
-	<string name="Country.Korea">Koreja</string>
-	<string name="Country.Kyrgyzstan">Kirgistan</string>
-	<string name="Country.Liechtenstein">Lihtenštajn</string>
-	<string name="Country.Luxembourg">Luksemburg</string>
-	<string name="Country.Malaysia">Malezija</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Meksiko</string>
-	<string name="Country.Mongolia">Mongolija</string>
-	<string name="Country.Montenegro">Crna Gora</string>
-	<string name="Country.Netherlands">Nizozemska</string>
-	<string name="Country.New Zealand">Novi Zeland</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Philippines">Filipini</string>
-	<string name="Country.Poland">Poljska</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Romania">Rumunjska</string>
-	<string name="Country.Rwanda">Ruanda</string>
-	<string name="Country.Saudi Arabia">Saudijska Arabija</string>
-	<string name="Country.Scotland">Škotska</string>
-	<string name="Country.Slovenia">Slovenija</string>
-	<string name="Country.South Korea">Južna Koreja</string>
-	<string name="Country.South Ossetia">Južna Osetija</string>
-	<string name="Country.Spain">Španjolska</string>
-	<string name="Country.Switzerland">Švicarska</string>
-	<string name="Country.Tajikistan">Tadžikistan</string>
-	<string name="Country.The Gambia">Gambija</string>
-	<string name="Country.Tunisia">Tunis</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.United States of America">Sjedinjene Američke Države (SAD)</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vanuatu">Novi Hebridi</string>
-	<string name="Country.Vietnam">Vijetnam</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Замбија</string>
-	<string name="Country.Zimbabwe">Zimbabve</string>
 </resources>
