--- a/Language/strings_hu.xml
+++ b/Language/strings_hu.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.Settings">Beállítások</string>
   <string name="Webradio.Home.Menu.Search">Keresés</string>
@@ -8,167 +8,4 @@
   <string name="Webradio.Filter.Clear">Tiszta</string>
   <string name="Webradio.Dialog.ShowFilter.Genre">Műfaj</string>
   <string name="Webradio.Dialog.Search.Header">Keresés</string>
-	<string name="Country.Afghanistan">Afganisztán</string>
-	<string name="Country.Albania">Albánia</string>
-	<string name="Country.Algeria">Algéria</string>
-	<string name="Country.American Samoa">Amerikai Szamoa</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Antigua and Barbuda">Antigua és Barbuda</string>
-	<string name="Country.Argentina">Argentína</string>
-	<string name="Country.Armenia">Örményország</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Ausztrália</string>
-	<string name="Country.Austria">Ausztria</string>
-	<string name="Country.Azerbaijan">Azerbajdzsán</string>
-	<string name="Country.Bahamas">Bahama-szigetek</string>
-	<string name="Country.Bahrain">Bahrein</string>
-	<string name="Country.Bangladesh">Banglades</string>
-	<string name="Country.Belarus">Belarusz</string>
-	<string name="Country.Belgium">Belgium</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Dahomey</string>
-	<string name="Country.Bhutan">Bhután</string>
-	<string name="Country.Bolivia">Bolívia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosznia és Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brazília</string>
-	<string name="Country.British Virgin Islands">Brit Virgen-szigetek</string>
-	<string name="Country.Bulgaria">Bulgária</string>
-	<string name="Country.Cambodia">Kambodzsa</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Zöld-foki Szigetek</string>
-	<string name="Country.Cayman Islands">Kajmán-szigetek</string>
-	<string name="Country.Chad">Csád</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">Kína</string>
-	<string name="Country.Christmas Island">Karácsony-sziget</string>
-	<string name="Country.Colombia">Kolumbia</string>
-	<string name="Country.Comoros">Comore-szigetek</string>
-	<string name="Country.Cook Islands">Cook-szigetek</string>
-	<string name="Country.Côte d'Ivoire">Elefántcsontpart</string>
-	<string name="Country.Croatia">Horvátország</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Ciprus</string>
-	<string name="Country.Czech Republic">Csehország</string>
-	<string name="Country.Denmark">Dánia</string>
-	<string name="Country.Djibouti">Dzsibuti</string>
-	<string name="Country.Dominican Republic">Dominikai Közösség</string>
-	<string name="Country.East Timor">Kelet-Timor</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egyiptom</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.Equatorial Guinea">Egyenlítői-Guinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Észtország</string>
-	<string name="Country.Ethiopia">Etiópia</string>
-	<string name="Country.Falkland Islands">Falkland-szigetek</string>
-	<string name="Country.Faroe Islands">Feröer-szigetek</string>
-	<string name="Country.Fiji">Fidzsi</string>
-	<string name="Country.Finland">Finnország</string>
-	<string name="Country.France">Franciaország</string>
-	<string name="Country.French Guiana">Francia-Guyana</string>
-	<string name="Country.French Polynesia">Francia Polinézia</string>
-	<string name="Country.Georgia">Grúzia</string>
-	<string name="Country.Germany">Németország</string>
-	<string name="Country.Gibraltar">Gibraltár</string>
-	<string name="Country.Greece">Görögország</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadeloupe</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guineai Köztársaság</string>
-	<string name="Country.Guinea-Bissau">Bissau-Guinea</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Hollandia</string>
-	<string name="Country.Hong Kong">Hongkong</string>
-	<string name="Country.Hungary">Magyarország</string>
-	<string name="Country.Iceland">Izland</string>
-	<string name="Country.India">India</string>
-	<string name="Country.Indonesia">Indonézia</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Írország</string>
-	<string name="Country.Israel">Izrael</string>
-	<string name="Country.Italy">Olaszország</string>
-	<string name="Country.Japan">Japán</string>
-	<string name="Country.Jordan">Jordánia</string>
-	<string name="Country.Kazakhstan">Kazahsztán</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuvait </string>
-	<string name="Country.Kyrgyzstan">Kirgizisztán</string>
-	<string name="Country.Laos">Laosz</string>
-	<string name="Country.Latvia">Lettország</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Liberia">Libéria</string>
-	<string name="Country.Libya">Líbia</string>
-	<string name="Country.Lithuania">Litvánia</string>
-	<string name="Country.Luxembourg">Luxemburg</string>
-	<string name="Country.Republic of Macedonia">Macedónia</string>
-	<string name="Country.Madagascar">Madagaszkár</string>
-	<string name="Country.Malaysia">Malajzia</string>
-	<string name="Country.Maldives">Maldív-szigetek</string>
-	<string name="Country.Malta">Málta</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexikó</string>
-	<string name="Country.Moldova">Moldova</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongólia</string>
-	<string name="Country.Montenegro">Montenegró</string>
-	<string name="Country.Namibia">Namíbia</string>
-	<string name="Country.Nepal">Nepál</string>
-	<string name="Country.Netherlands">Hollandia</string>
-	<string name="Country.New Zealand">Új-Zéland</string>
-	<string name="Country.Nigeria">Nigéria</string>
-	<string name="Country.Norway">Norvégia</string>
-	<string name="Country.Oman">Omán</string>
-	<string name="Country.Pakistan">Pakisztán</string>
-	<string name="Country.Papua New Guinea">Pápua Új-Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Philippines">Fülöp-szigetek</string>
-	<string name="Country.Poland">Lengyelország</string>
-	<string name="Country.Portugal">Portugália</string>
-	<string name="Country.Monaco">Monacói Hercegség</string>
-	<string name="Country.Qatar">Katar</string>
-	<string name="Country.Romania">Románia</string>
-	<string name="Country.Russia">Oroszország</string>
-	<string name="Country.Rwanda">Ruanda</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.Saudi Arabia">Szaúd-Arábia</string>
-	<string name="Country.Scotland">Skócia</string>
-	<string name="Country.Serbia">Szerbia</string>
-	<string name="Country.Singapore">Szingapúr</string>
-	<string name="Country.Slovakia">Szlovákia</string>
-	<string name="Country.Slovenia">Szlovénia</string>
-	<string name="Country.Solomon Islands">Salamon-szigetek</string>
-	<string name="Country.Somalia">Szomália</string>
-	<string name="Country.South Africa">Dél-afrikai Köztársaság</string>
-	<string name="Country.South Korea">Dél-Korea</string>
-	<string name="Country.South Ossetia">Dél-Oszétia</string>
-	<string name="Country.Spain">Spanyolország</string>
-	<string name="Country.Sri Lanka">Srí-Lanka</string>
-	<string name="Country.Sudan">Szudán</string>
-	<string name="Country.Swaziland">Szváziföld</string>
-	<string name="Country.Sweden">Svédország</string>
-	<string name="Country.Switzerland">Svájc</string>
-	<string name="Country.Syria">Szíria</string>
-	<string name="Country.Free Area of the Republic of China">Tajvan</string>
-	<string name="Country.Tajikistan">Tádzsikisztán</string>
-	<string name="Country.Tanzania">Tanzánia</string>
-	<string name="Country.Thailand">Thaiföld</string>
-	<string name="Country.Tunisia">Tunézia</string>
-	<string name="Country.Turkey">Törökország</string>
-	<string name="Country.Turkmenistan">Türkmenisztán</string>
-	<string name="Country.Ukraine">Ukrajna</string>
-	<string name="Country.United Arab Emirates"> Egyesült Arab Emirátusok </string>
-	<string name="Country.United Kingdom">Egyesült Királyság</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Nagy-Britannia és Észak-Írország Egyesült Királysága</string>
-	<string name="Country.United States of America">Amerikai Egyesült Államok</string>
-	<string name="Country.Uzbekistan">Üzbegisztán</string>
-	<string name="Country.Vatican City">Vatikán</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
