--- a/Language/strings_id.xml
+++ b/Language/strings_id.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Saring</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Favorit</string>
@@ -18,201 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Hapus</string>
   <string name="Webradio.Dialog.Search.Header">Cari</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Åland Islands">Kepulauan Aland</string>
-	<string name="Country.Albania">Albania</string>
-	<string name="Country.Algeria">Aljazair</string>
-	<string name="Country.American Samoa">Samoa Amerika</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua dan Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenia</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australia</string>
-	<string name="Country.Austria">Austria</string>
-	<string name="Country.Azerbaijan">Azerbaijan</string>
-	<string name="Country.Bahamas">Bahama</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Belarus</string>
-	<string name="Country.Belgium">Belgia</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Benin">Dahomey</string>
-	<string name="Country.Bermuda">Bermuda</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnia-Herzegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasil</string>
-	<string name="Country.British Virgin Islands">Kepulauan Virgin Inggris</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgaria</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Cambodia">Kamboja</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Tanjung Verde</string>
-	<string name="Country.Cayman Islands">Kepulauan Cayman</string>
-	<string name="Country.Central African Republic">Republik Afrika Tengah</string>
-	<string name="Country.Chad">Chad</string>
-	<string name="Country.Chile">Chili</string>
-	<string name="Country.China">Cina</string>
-	<string name="Country.China">Tiongkok</string>
-	<string name="Country.Colombia">Kolombia</string>
-	<string name="Country.Comoros">Komoro</string>
-	<string name="Country.Cook Islands">Kepulauan Cook</string>
-	<string name="Country.Costa Rica">Kosta Rika</string>
-	<string name="Country.Côte d'Ivoire">Pantai Gading</string>
-	<string name="Country.Croatia">Kroasia</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Siprus</string>
-	<string name="Country.Czech Republic">Republik Ceska</string>
-	<string name="Country.Denmark">Denmark</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominika</string>
-	<string name="Country.Dominican Republic">Republik Dominika</string>
-	<string name="Country.East Timor">Timor Timur</string>
-	<string name="Country.Ecuador">Ekuador</string>
-	<string name="Country.Egypt">Mesir</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.England">Inggris</string>
-	<string name="Country.Equatorial Guinea">Guinea Khatulistiwa</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estonia</string>
-	<string name="Country.Ethiopia">Ethiopia</string>
-	<string name="Country.Ethiopia">Abyssinia</string>
-	<string name="Country.Falkland Islands">Kepulauan Falklands</string>
-	<string name="Country.Faroe Islands">Kepulauan Faroe</string>
-	<string name="Country.Finland">Finlandia</string>
-	<string name="Country.France">Perancis</string>
-	<string name="Country.French Guiana">Guyana Perancis</string>
-	<string name="Country.French Polynesia">Polinesia Perancis</string>
-	<string name="Country.French Southern and Antarctic Lands">Teritori Perancis Selatan dan Antartika</string>
-	<string name="Country.Germany">Jerman</string>
-	<string name="Country.Greece">Yunani</string>
-	<string name="Country.Greenland">Tanah Hijau</string>
-	<string name="Country.Guam">Guam</string>
-	<string name="Country.Holland">Belanda</string>
-	<string name="Country.Holy See">Takhta Suci</string>
-	<string name="Country.Hungary">Hongaria</string>
-	<string name="Country.Iceland">Islandia</string>
-	<string name="Country.India">Hindia</string>
-	<string name="Country.Indonesia">Indonesia</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Irlandia</string>
-	<string name="Country.Italy">Italia</string>
-	<string name="Country.Jamaica">Jamaika</string>
-	<string name="Country.Japan">Jepang</string>
-	<string name="Country.Jordan">Yordania</string>
-	<string name="Country.Jordan">Transyordania</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirgistan</string>
-	<string name="Country.Lebanon">Lebanon</string>
-	<string name="Country.Luxembourg">Luksemburg</string>
-	<string name="Country.Macau">Makau</string>
-	<string name="Country.Republic of Macedonia">Makedonia</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Maladewa</string>
-	<string name="Country.Marshall Islands">Kepulauan Marshall</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Meksiko</string>
-	<string name="Country.Federated States of Micronesia">Mikronesia</string>
-	<string name="Country.Moldova">Moldova</string>
-	<string name="Country.Monaco">Monako</string>
-	<string name="Country.Morocco">Maroko</string>
-	<string name="Country.Mozambique">Mozambik</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Burma</string>
-	<string name="Country.Namibia">Namibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepal</string>
-	<string name="Country.Netherlands Antilles">Antilla Belanda</string>
-	<string name="Country.Netherlands">Belanda</string>
-	<string name="Country.New Caledonia">Kaledonia Baru</string>
-	<string name="Country.New Zealand">Selandia Baru</string>
-	<string name="Country.Nicaragua">Nikaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.Norfolk Island">Kepulauan Norfolk</string>
-	<string name="Country.North Korea">Korea Utara</string>
-	<string name="Country.Northern Mariana Islands">Marianas Utara</string>
-	<string name="Country.Norway">Norwegia</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Papua New Guinea">Papua Nugini</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Philippines">Filipina</string>
-	<string name="Country.Pitcairn Islands">Kepulauan Pitcairn</string>
-	<string name="Country.Poland">Polandia</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Kerajaan Monako</string>
-	<string name="Country.Puerto Rico">Puerto Riko</string>
-	<string name="Country.Qatar">Qatar</string>
-	<string name="Country.Romania">Rumania</string>
-	<string name="Country.Russia">Rusia</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent dan Grenada</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.Saudi Arabia">Arab Saudi</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbia</string>
-	<string name="Country.Seychelles">Seychelles</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapura</string>
-	<string name="Country.Slovakia">Slowakia</string>
-	<string name="Country.Slovenia">Slovenia</string>
-	<string name="Country.Solomon Islands">Kepulauan Solomon</string>
-	<string name="Country.Somalia">Somalia</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Kepulauan Georgia Selatan dan Sandwich Selatan</string>
-	<string name="Country.South Korea">Korea Selatan</string>
-	<string name="Country.Spain">Spanyol</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sudan">Sudan</string>
-	<string name="Country.Suriname">Suriname</string>
-	<string name="Country.Sweden">Swedia</string>
-	<string name="Country.Switzerland">Swiss</string>
-	<string name="Country.Syria">Suriah</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tajikistan</string>
-	<string name="Country.Tanzania">Tanzania</string>
-	<string name="Country.Thailand">Thailand</string>
-	<string name="Country.The Gambia">Gambia</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tokelau Islands">Kepulauan Tokelau</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Trinidad and Tobago">Trinidad dan Tobago</string>
-	<string name="Country.Tunisia">Tunisia</string>
-	<string name="Country.Turkey">Turki</string>
-	<string name="Country.Northern Cyprus">Siprus Utara</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Kepulauan Turks dan Caicos</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukraina</string>
-	<string name="Country.United Arab Emirates"> Uni Emirat Arab </string>
-	<string name="Country.United Kingdom">Kerajaan Britania Raya</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Perserikatan Kerajaan Britania Raya dan Irlandia Utara</string>
-	<string name="Country.United States Virgin Islands">Kepulauan Virgin Amerika</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Usbekistan</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vanuatu">Hebrides Baru</string>
-	<string name="Country.Vatican City">Vatikan</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Western Sahara">Sahara Barat</string>
-	<string name="Country.Yemen">Yaman</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
