--- a/Language/strings_it.xml
+++ b/Language/strings_it.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">Vista</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filtro</string>
@@ -19,234 +19,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genere</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Cancella</string>
   <string name="Webradio.Dialog.Search.Header">Ricerca</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Albania">Albania</string>
-	<string name="Country.Algeria">Algeria</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Anguilla">Anguilla</string>
-	<string name="Country.Antigua and Barbuda">Antigua e Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenia</string>
-	<string name="Country.Aruba">Aruba</string>
-	<string name="Country.Australia">Australia</string>
-	<string name="Country.Austria">Austria</string>
-	<string name="Country.Azerbaijan">Azerbaigian</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bahrain">Bahrein</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Bielorussia</string>
-	<string name="Country.Belgium">Belgio</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Belize">Honduras Britannico</string>
-	<string name="Country.Benin">Benin</string>
-	<string name="Country.Benin">Dahomey</string>
-	<string name="Country.Bermuda">Bermude</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnia-Erzegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasile</string>
-	<string name="Country.British Virgin Islands">Isole Vergini Britanniche</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgaria</string>
-	<string name="Country.Burkina Faso">Burkina Faso</string>
-	<string name="Country.Burundi">Urundi</string>
-	<string name="Country.Cambodia">Cambogia</string>
-	<string name="Country.Cameroon">Camerun</string>
-	<string name="Country.Canada">Canada</string>
-	<string name="Country.Cape Verde">Capo Verde</string>
-	<string name="Country.Central African Republic">Repubblica Centroafricana</string>
-	<string name="Country.Chad">Ciad</string>
-	<string name="Country.Chile">Cile</string>
-	<string name="Country.China">Cina</string>
-	<string name="Country.Christmas Island">Isola del Natale</string>
-	<string name="Country.Cocos (Keeling) Islands">Isole Cocos</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Comore</string>
-	<string name="Country.Cook Islands">Isole Cook</string>
-	<string name="Country.Costa Rica">Costa Rica</string>
-	<string name="Country.Côte d'Ivoire">Costa d'Avorio</string>
-	<string name="Country.Croatia">Croazia</string>
-	<string name="Country.Cyprus">Cipro</string>
-	<string name="Country.Czech Republic">Cechia</string>
-	<string name="Country.Czech Republic">Repubblica Ceca</string>
-	<string name="Country.Denmark">Danimarca</string>
-	<string name="Country.Djibouti">Gibuti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.Dominican Republic">Repubblica Dominicana</string>
-	<string name="Country.East Timor">Timor Est</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egitto</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.England">Inghilterra</string>
-	<string name="Country.Equatorial Guinea">Guinea Equatoriale</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estonia</string>
-	<string name="Country.Ethiopia">Etiopia</string>
-	<string name="Country.Ethiopia">Abissinia</string>
-	<string name="Country.Falkland Islands">Isole Falkland</string>
-	<string name="Country.Faroe Islands">Isole Fær Øer</string>
-	<string name="Country.Fiji">Figi</string>
-	<string name="Country.Finland">Finlandia</string>
-	<string name="Country.France">Francia</string>
-	<string name="Country.French Guiana">Guyana Francese</string>
-	<string name="Country.French Polynesia">Polinesia Francese</string>
-	<string name="Country.French Southern and Antarctic Lands">Territori Australi e Antartici Francesi</string>
-	<string name="Country.Georgia">Georgia</string>
-	<string name="Country.Germany">Germania</string>
-	<string name="Country.Ghana">Ghana</string>
-	<string name="Country.Gibraltar">Gibilterra</string>
-	<string name="Country.Greece">Grecia</string>
-	<string name="Country.Greenland">Groenlandia</string>
-	<string name="Country.Grenada">Grenada</string>
-	<string name="Country.Guadeloupe">Guadalupa</string>
-	<string name="Country.Guatemala">Guatemala</string>
-	<string name="Country.Guinea">Guinea</string>
-	<string name="Country.Guinea-Bissau">Guinea-Bissau</string>
-	<string name="Country.Haiti">Haiti</string>
-	<string name="Country.Holland">Olanda</string>
-	<string name="Country.Holy See">Santa Sede</string>
-	<string name="Country.Hong Kong">Hong Kong</string>
-	<string name="Country.Hungary">Ungheria</string>
-	<string name="Country.Iceland">Islanda</string>
-	<string name="Country.India">India</string>
-	<string name="Country.Indonesia">Indonesia</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iran">Persia</string>
-	<string name="Country.Iraq">伊拉克</string>
-	<string name="Country.Ireland">Irlanda</string>
-	<string name="Country.Israel">Israele</string>
-	<string name="Country.Italy">Italia</string>
-	<string name="Country.Jamaica">Giamaica</string>
-	<string name="Country.Japan">Giappone</string>
-	<string name="Country.Jordan">Giordania</string>
-	<string name="Country.Jordan">Transgiordania</string>
-	<string name="Country.Kazakhstan">Kazakistan</string>
-	<string name="Country.Kenya">Chenia</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Corea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirghizistan</string>
-	<string name="Country.Latvia">Lettonia</string>
-	<string name="Country.Lebanon">Libano</string>
-	<string name="Country.Lesotho">Lesotho</string>
-	<string name="Country.Liberia">Liberia</string>
-	<string name="Country.Libya">Libia</string>
-	<string name="Country.Lithuania">Lituania</string>
-	<string name="Country.Luxembourg">Lussemburgo</string>
-	<string name="Country.Republic of Macedonia">Macedonia</string>
-	<string name="Country.Madagascar">Madagascar</string>
-	<string name="Country.Malawi">Malawi</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Maldive</string>
-	<string name="Country.Marshall Islands">Isole Marshall</string>
-	<string name="Country.Mauritania">Mauritania</string>
-	<string name="Country.Mauritius">Mauritius</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Messico</string>
-	<string name="Country.Federated States of Micronesia">Micronesia</string>
-	<string name="Country.Moldova">Moldavia</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongolia</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Morocco">Marocco</string>
-	<string name="Country.Mozambique">Mozambico</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Birmania</string>
-	<string name="Country.Namibia">Namibia</string>
-	<string name="Country.Nauru">Nauru</string>
-	<string name="Country.Nepal">Nepal</string>
-	<string name="Country.Netherlands">Paesi Bassi</string>
-	<string name="Country.New Caledonia">Nuova Caledonia</string>
-	<string name="Country.New Zealand">Nuova Zelanda</string>
-	<string name="Country.Nicaragua">Nicaragua</string>
-	<string name="Country.Niger">Niger</string>
-	<string name="Country.Nigeria">Nigeria</string>
-	<string name="Country.Niue">Niue</string>
-	<string name="Country.North Korea">Corea del Nord</string>
-	<string name="Country.Norway">Norvegia</string>
-	<string name="Country.Pakistan">Pakistan</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Panama">Panamá</string>
-	<string name="Country.Papua New Guinea">Papua-Nuova Guinea</string>
-	<string name="Country.Paraguay">Paraguay</string>
-	<string name="Country.Peru">Perù</string>
-	<string name="Country.Philippines">Filippine</string>
-	<string name="Country.Pitcairn Islands">Isole Pitcairn</string>
-	<string name="Country.Poland">Polonia</string>
-	<string name="Country.Portugal">Portogallo</string>
-	<string name="Country.Monaco">Principato di Monaco</string>
-	<string name="Country.Puerto Rico">Porto Rico</string>
-	<string name="Country.Qatar">Qatar</string>
-	<string name="Country.Réunion">Riunione</string>
-	<string name="Country.Romania">Romania</string>
-	<string name="Country.Russia">Russia</string>
-	<string name="Country.Rwanda">Ruanda</string>
-	<string name="Country.Saint Helena">Sant'Elena</string>
-	<string name="Country.Saint Kitts and Nevis">Saint Kitts e Nevis</string>
-	<string name="Country.Saint Lucia">Santa Lucia</string>
-	<string name="Country.Saint Pierre and Miquelon">Saint Pierre e Miquelon</string>
-	<string name="Country.Saint Vincent and the Grenadines">Saint Vincent e Grenadine</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.São Tomé and Príncipe">Sao Tomé e Principe</string>
-	<string name="Country.Saudi Arabia">Arabia Saudita</string>
-	<string name="Country.Scotland">Scozia</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Serbia</string>
-	<string name="Country.Seychelles">Seicelle</string>
-	<string name="Country.Seychelles">Seychelles</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Singapore">Singapore</string>
-	<string name="Country.Slovakia">Slovacchia</string>
-	<string name="Country.Slovenia">Slovenia</string>
-	<string name="Country.Solomon Islands">Isole Salomone</string>
-	<string name="Country.Somalia">Somalia</string>
-	<string name="Country.South Africa">Sud Africa</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Georgia del Sud e Isole Sandwich Australi</string>
-	<string name="Country.South Korea">Corea del Sud</string>
-	<string name="Country.South Ossetia">Ossezia del Sud</string>
-	<string name="Country.Spain">Spagna</string>
-	<string name="Country.Sri Lanka">Sri Lanka</string>
-	<string name="Country.Sri Lanka">Ceylon</string>
-	<string name="Country.Sudan">Sudan</string>
-	<string name="Country.Suriname">Suriname</string>
-	<string name="Country.Suriname">Guyana Olandese</string>
-	<string name="Country.Swaziland">Swaziland</string>
-	<string name="Country.Sweden">Svezia</string>
-	<string name="Country.Switzerland">Svizzera</string>
-	<string name="Country.Syria">Siria</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tagikistan</string>
-	<string name="Country.Tanzania">Tanzania</string>
-	<string name="Country.Thailand">Tailandia</string>
-	<string name="Country.Thailand">Thailandia</string>
-	<string name="Country.Thailand">Siam</string>
-	<string name="Country.The Gambia">Gambia</string>
-	<string name="Country.Togo">Togo</string>
-	<string name="Country.Tonga">Tonga</string>
-	<string name="Country.Transnistria">Transnistria</string>
-	<string name="Country.Trinidad and Tobago">Trinidad e Tobago</string>
-	<string name="Country.Tunisia">Tunisia</string>
-	<string name="Country.Turkey">Turchia</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Turks e Caicos</string>
-	<string name="Country.Tuvalu">Tuvalu</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ucraina</string>
-	<string name="Country.United Arab Emirates"> Emirati Arabi Uniti </string>
-	<string name="Country.United Kingdom">Regno Unito</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Regno Unito di Gran Bretagna e Irlanda del Nord</string>
-	<string name="Country.United States of America">Stati Uniti d'America</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vanuatu">Nuove Ebridi</string>
-	<string name="Country.Vatican City">Vaticano</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Galles</string>
-	<string name="Country.Yemen">Yemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
