--- a/Language/strings_ko.xml
+++ b/Language/strings_ko.xml
@@ -1,240 +1,2 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources/>
-	<string name="Country.Afghanistan">아프가니스탄</string>
-	<string name="Country.Åland Islands">올란드 제도</string>
-	<string name="Country.Albania">알바니아</string>
-	<string name="Country.Algeria">알제리</string>
-	<string name="Country.American Samoa">아메리칸 사모아</string>
-	<string name="Country.Andorra">안도라</string>
-	<string name="Country.Angola">앙골라</string>
-	<string name="Country.Anguilla">앵귈라</string>
-	<string name="Country.Antigua and Barbuda">앤티가 바부다</string>
-	<string name="Country.Argentina">아르헨티나</string>
-	<string name="Country.Armenia">아르메니아</string>
-	<string name="Country.Aruba">아루바</string>
-	<string name="Country.Australia">오스트레일리아</string>
-	<string name="Country.Austria">오스트리아</string>
-	<string name="Country.Azerbaijan">아제르바이잔</string>
-	<string name="Country.Bahamas">바하마</string>
-	<string name="Country.Bahrain">바레인</string>
-	<string name="Country.Bangladesh">방글라데시</string>
-	<string name="Country.Barbados">바베이도스</string>
-	<string name="Country.Belarus">벨라루스</string>
-	<string name="Country.Belgium">벨기에</string>
-	<string name="Country.Belize">벨리즈</string>
-	<string name="Country.Benin">베냉</string>
-	<string name="Country.Bermuda">버뮤다</string>
-	<string name="Country.Bhutan">부탄</string>
-	<string name="Country.Bolivia">볼리비아</string>
-	<string name="Country.Bosnia and Herzegovina">보스니아 헤르체고비나</string>
-	<string name="Country.Botswana">보츠와나</string>
-	<string name="Country.Brazil">브라질</string>
-	<string name="Country.British Virgin Islands">영국령 버진아일랜드</string>
-	<string name="Country.Brunei">브루나이</string>
-	<string name="Country.Bulgaria">불가리아</string>
-	<string name="Country.Burkina Faso">부르키나파소</string>
-	<string name="Country.Burkina Faso">오트볼타</string>
-	<string name="Country.Burundi">부룬디</string>
-	<string name="Country.Cambodia">캄보디아</string>
-	<string name="Country.Cameroon">카메룬</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">카보베르데</string>
-	<string name="Country.Cayman Islands">케이맨 제도</string>
-	<string name="Country.Central African Republic">Jung-ang Apeurika Gonghwaguk</string>
-	<string name="Country.Chad">차드</string>
-	<string name="Country.Chile">칠레</string>
-	<string name="Country.Christmas Island">크리스마스 섬</string>
-	<string name="Country.Cocos (Keeling) Islands">코코스 제도</string>
-	<string name="Country.Colombia">콜롬비아</string>
-	<string name="Country.Comoros">코모로</string>
-	<string name="Country.Cook Islands">쿡 제도</string>
-	<string name="Country.Costa Rica">코스타리카</string>
-	<string name="Country.Côte d'Ivoire">코트디부아르</string>
-	<string name="Country.Croatia">크로아티아</string>
-	<string name="Country.Cuba">쿠바</string>
-	<string name="Country.Cyprus">키프로스</string>
-	<string name="Country.Czech Republic">체코</string>
-	<string name="Country.Denmark">덴마크</string>
-	<string name="Country.Djibouti">지부티</string>
-	<string name="Country.Dominica">도미니카</string>
-	<string name="Country.Dominican Republic">도미니카 공화국</string>
-	<string name="Country.East Timor">동티모르</string>
-	<string name="Country.Ecuador">에콰도르</string>
-	<string name="Country.Egypt">이집트</string>
-	<string name="Country.El Salvador">엘살바도르</string>
-	<string name="Country.Equatorial Guinea">적도 기니</string>
-	<string name="Country.Eritrea">에리트레아</string>
-	<string name="Country.Estonia">에스토니아</string>
-	<string name="Country.Ethiopia">에티오피아</string>
-	<string name="Country.Ethiopia">아비시니아</string>
-	<string name="Country.Falkland Islands">포클랜드 제도</string>
-	<string name="Country.Faroe Islands">페로 제도</string>
-	<string name="Country.Fiji">피지</string>
-	<string name="Country.Finland">핀란드</string>
-	<string name="Country.France">프랑스</string>
-	<string name="Country.French Guiana">프랑스령 기아나</string>
-	<string name="Country.French Polynesia">프랑스령 폴리네시아</string>
-	<string name="Country.French Southern and Antarctic Lands">프랑스령 남부와 남극 지역</string>
-	<string name="Country.Gabon">가봉</string>
-	<string name="Country.Georgia">조지아</string>
-	<string name="Country.Ghana">가나</string>
-	<string name="Country.Gibraltar">지브롤터</string>
-	<string name="Country.Greece">그리스</string>
-	<string name="Country.Greenland">그린란드</string>
-	<string name="Country.Grenada">그레나다</string>
-	<string name="Country.Guadeloupe">과들루프</string>
-	<string name="Country.Guam">괌</string>
-	<string name="Country.Guatemala">과테말라</string>
-	<string name="Country.Guinea">기니</string>
-	<string name="Country.Guinea-Bissau">기니비사우</string>
-	<string name="Country.Guyana">가이아나</string>
-	<string name="Country.Haiti">아이티</string>
-	<string name="Country.Holland">홀란드</string>
-	<string name="Country.Holy See">성좌</string>
-	<string name="Country.Honduras">온두라스</string>
-	<string name="Country.Hong Kong">홍콩</string>
-	<string name="Country.Hungary">헝가리</string>
-	<string name="Country.Iceland">아이슬란드</string>
-	<string name="Country.India">인도</string>
-	<string name="Country.Indonesia">인도네시아</string>
-	<string name="Country.Iran">이란</string>
-	<string name="Country.Iran">페르시아</string>
-	<string name="Country.Iraq">이라크</string>
-	<string name="Country.Ireland">아일랜드</string>
-	<string name="Country.Israel">이스라엘</string>
-	<string name="Country.Jamaica">자메이카</string>
-	<string name="Country.Jordan">요르단</string>
-	<string name="Country.Jordan">트란스 요르단</string>
-	<string name="Country.Kazakhstan">카자흐스탄</string>
-	<string name="Country.Kenya">케냐</string>
-	<string name="Country.Kiribati">키리바시</string>
-	<string name="Country.Kuwait">쿠웨이트</string>
-	<string name="Country.Kyrgyzstan">키르기스스탄</string>
-	<string name="Country.Laos">라오스</string>
-	<string name="Country.Latvia">라트비아</string>
-	<string name="Country.Lebanon">레바논</string>
-	<string name="Country.Lesotho">레소토</string>
-	<string name="Country.Liberia">라이베리아</string>
-	<string name="Country.Libya">리비아</string>
-	<string name="Country.Liechtenstein">리히텐슈타인</string>
-	<string name="Country.Lithuania">리투아니아</string>
-	<string name="Country.Luxembourg">룩셈부르크</string>
-	<string name="Country.Macau">마카오</string>
-	<string name="Country.Republic of Macedonia">마케도니아</string>
-	<string name="Country.Madagascar">마다가스카르</string>
-	<string name="Country.Malawi">말라위</string>
-	<string name="Country.Malaysia">말레이시아</string>
-	<string name="Country.Maldives">몰디브</string>
-	<string name="Country.Mali">말리</string>
-	<string name="Country.Malta">몰타</string>
-	<string name="Country.Marshall Islands">마셜 제도</string>
-	<string name="Country.Martinique">마르티니크</string>
-	<string name="Country.Mauritania">모리타니</string>
-	<string name="Country.Mauritius">모리셔스</string>
-	<string name="Country.Mayotte">마요트</string>
-	<string name="Country.Mexico">멕시코</string>
-	<string name="Country.Federated States of Micronesia">미크로네시아</string>
-	<string name="Country.Moldova">몰도바</string>
-	<string name="Country.Monaco">모나코</string>
-	<string name="Country.Mongolia">몽골</string>
-	<string name="Country.Montenegro">몬테네그로</string>
-	<string name="Country.Montserrat">몬트세랫</string>
-	<string name="Country.Morocco">모로코</string>
-	<string name="Country.Mozambique">모잠비크</string>
-	<string name="Country.Myanmar">미얀마</string>
-	<string name="Country.Myanmar">버마</string>
-	<string name="Country.Namibia">나미비아</string>
-	<string name="Country.Nauru">나우루</string>
-	<string name="Country.Nepal">네팔</string>
-	<string name="Country.Netherlands Antilles">네덜란드령 안틸레스</string>
-	<string name="Country.Netherlands">네덜란드</string>
-	<string name="Country.New Caledonia">누벨칼레도니</string>
-	<string name="Country.New Zealand">뉴질랜드</string>
-	<string name="Country.Nicaragua">니카라과</string>
-	<string name="Country.Niger">니제르</string>
-	<string name="Country.Nigeria">나이지리아</string>
-	<string name="Country.Niue">니우에</string>
-	<string name="Country.Norfolk Island">노퍽 제도</string>
-	<string name="Country.Northern Mariana Islands">북마리아나 제도</string>
-	<string name="Country.Norway">노르웨이</string>
-	<string name="Country.Oman">오만</string>
-	<string name="Country.Pakistan">파키스탄</string>
-	<string name="Country.Palau">팔라우</string>
-	<string name="Country.Palestinian territories">팔레스타인</string>
-	<string name="Country.Panama">파나마</string>
-	<string name="Country.Papua New Guinea">파푸아뉴기니</string>
-	<string name="Country.Paraguay">파라과이</string>
-	<string name="Country.Peru">페루</string>
-	<string name="Country.Philippines">필리핀</string>
-	<string name="Country.Pitcairn Islands">핏케언 제도</string>
-	<string name="Country.Poland">폴란드</string>
-	<string name="Country.Portugal">포르투갈</string>
-	<string name="Country.Monaco">모나코 공국</string>
-	<string name="Country.Puerto Rico">푸에르토리코</string>
-	<string name="Country.Qatar">카타르</string>
-	<string name="Country.Réunion">레위니옹</string>
-	<string name="Country.Romania">루마니아</string>
-	<string name="Country.Russia">러시아</string>
-	<string name="Country.Rwanda">르완다</string>
-	<string name="Country.Saint Helena">세인트헬레나</string>
-	<string name="Country.Saint Kitts and Nevis">세인트키츠 네비스</string>
-	<string name="Country.Saint Lucia">세인트루시아</string>
-	<string name="Country.Saint Pierre and Miquelon">생피에르 미클롱</string>
-	<string name="Country.Saint Vincent and the Grenadines">세인트빈센트 그레나딘</string>
-	<string name="Country.Samoa">사모아</string>
-	<string name="Country.San Marino">산마리노</string>
-	<string name="Country.São Tomé and Príncipe">상투메 프린시페</string>
-	<string name="Country.Saudi Arabia">사우디아라비아</string>
-	<string name="Country.Senegal">세네갈</string>
-	<string name="Country.Serbia">세르비아</string>
-	<string name="Country.Seychelles">세이셸</string>
-	<string name="Country.Sierra Leone">시에라리온</string>
-	<string name="Country.Singapore">싱가포르</string>
-	<string name="Country.Slovakia">슬로바키아</string>
-	<string name="Country.Slovenia">슬로베니아</string>
-	<string name="Country.Solomon Islands">솔로몬 제도</string>
-	<string name="Country.Somalia">소말리아</string>
-	<string name="Country.South Africa">남아프리카 공화국</string>
-	<string name="Country.South Georgia and South Sandwich Islands">사우스조지아 사우스샌드위치 제도</string>
-	<string name="Country.Spain">Eseupanya</string>
-	<string name="Country.Sri Lanka">Ilangai</string>
-	<string name="Country.Sudan">수단</string>
-	<string name="Country.Suriname">수리남</string>
-	<string name="Country.Suriname">네덜란드령 기아나</string>
-	<string name="Country.Swaziland">스와질란드</string>
-	<string name="Country.Sweden">스웨덴</string>
-	<string name="Country.Switzerland">스위스</string>
-	<string name="Country.Syria">시리아</string>
-	<string name="Country.Tajikistan">타지키스탄</string>
-	<string name="Country.Tanzania">탄자니아</string>
-	<string name="Country.The Gambia">감비아</string>
-	<string name="Country.Togo">토고</string>
-	<string name="Country.Tokelau Islands">토켈라우</string>
-	<string name="Country.Tonga">통가</string>
-	<string name="Country.Transnistria">트란스니스트리아</string>
-	<string name="Country.Trinidad and Tobago">트리니다드 토바고</string>
-	<string name="Country.Tunisia">튀니지</string>
-	<string name="Country.Turkey">터키</string>
-	<string name="Country.Northern Cyprus">북키프로스</string>
-	<string name="Country.Turkmenistan">투르크메니스탄</string>
-	<string name="Country.Turks and Caicos Islands">터크스 케이커스 제도</string>
-	<string name="Country.Tuvalu">투발루</string>
-	<string name="Country.Uganda">우간다</string>
-	<string name="Country.Ukraine">우크라이나</string>
-	<string name="Country.United Arab Emirates">아랍에미리트 연방</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">그레이트 브리튼 북아일랜드 연합왕국</string>
-	<string name="Country.United States of America">아메리카 합중국</string>
-	<string name="Country.United States Virgin Islands">미국령 버진 제도</string>
-	<string name="Country.Uruguay">우루과이</string>
-	<string name="Country.Uzbekistan">우즈베키스탄</string>
-	<string name="Country.Vanuatu">바누아투</string>
-	<string name="Country.Vatican City">바티칸 시국</string>
-	<string name="Country.Venezuela">베네수엘라</string>
-	<string name="Country.Vietnam">베트남</string>
-	<string name="Country.Wales">웨일스</string>
-	<string name="Country.Wallis and Futuna">왈리스 퓌튀나</string>
-	<string name="Country.Western Sahara">서사하라</string>
-	<string name="Country.Yemen">예멘</string>
-	<string name="Country.Zambia">잠비아</string>
-	<string name="Country.Zimbabwe">짐바브웨</string>
-</resources>
