--- a/Language/strings_nb.xml
+++ b/Language/strings_nb.xml
@@ -1,5 +1,2 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources/>
-	<string name="Country.Scotland">Skottland</string>
-	<string name="Country.Sweden">Sverige</string>
-</resources>
