--- a/Language/strings_no.xml
+++ b/Language/strings_no.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.View">Visning</string>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
@@ -19,112 +19,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Sjanger</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Slett</string>
   <string name="Webradio.Dialog.Search.Header">Søk</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Albania">Albania</string>
-	<string name="Country.Algeria">Algerie</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Antigua and Barbuda">Antigua og Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenia</string>
-	<string name="Country.Australia">Australia</string>
-	<string name="Country.Austria">Østerrike</string>
-	<string name="Country.Azerbaijan">Aserbajdsjan</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Belarus">Hviterussland</string>
-	<string name="Country.Belgium">Belgia</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Belize">Britisk Honduras</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnia-Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasil</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgaria</string>
-	<string name="Country.Cambodia">Kambodsja</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Canada</string>
-	<string name="Country.Cape Verde">Kapp Verde</string>
-	<string name="Country.Central African Republic">Den sentralafrikanske republikk</string>
-	<string name="Country.Chad">Tsjad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">Kina</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Komorene</string>
-	<string name="Country.Croatia">Kroatia</string>
-	<string name="Country.Czech Republic">Tsjekkia</string>
-	<string name="Country.Denmark">Danmark</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominican Republic">Den dominikanske republikk</string>
-	<string name="Country.East Timor">Øst-Timor</string>
-	<string name="Country.Ecuador">Ecuador</string>
-	<string name="Country.Egypt">Egypt</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.Equatorial Guinea">Ekvatorial-Guinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estland</string>
-	<string name="Country.Ethiopia">Etiopia</string>
-	<string name="Country.Ethiopia">Abessinia</string>
-	<string name="Country.Faroe Islands">Færøyene</string>
-	<string name="Country.Fiji">Fiji</string>
-	<string name="Country.Georgia">Georgia</string>
-	<string name="Country.Germany">Tyskland</string>
-	<string name="Country.Greece">Hellas</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">Den hellige stol</string>
-	<string name="Country.Hungary">Ungarn</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Italy">Italia</string>
-	<string name="Country.Japan">Japan</string>
-	<string name="Country.Jordan">Jordan</string>
-	<string name="Country.Jordan">Transjordan</string>
-	<string name="Country.Kazakhstan">Kasakhstan</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirgisistan</string>
-	<string name="Country.Latvia">Latvia</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Lithuania">Litauen</string>
-	<string name="Country.Luxembourg">Luxembourg</string>
-	<string name="Country.Republic of Macedonia">Makedonia</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Maldives">Maldivene</string>
-	<string name="Country.Marshall Islands">Marshalløyene</string>
-	<string name="Country.Mauritania">Mauritania</string>
-	<string name="Country.Mayotte">Mayotte</string>
-	<string name="Country.Mexico">Mexico</string>
-	<string name="Country.Federated States of Micronesia">Mikronesia</string>
-	<string name="Country.Mongolia">Mongolia</string>
-	<string name="Country.Morocco">Marokko</string>
-	<string name="Country.Mozambique">Mosambik</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Burma</string>
-	<string name="Country.Netherlands">Nederland</string>
-	<string name="Country.New Caledonia">Ny-Caledonia</string>
-	<string name="Country.New Zealand">New Zealand</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Papua New Guinea">Papua Ny-Guinea</string>
-	<string name="Country.Poland">Polen</string>
-	<string name="Country.Monaco">Fyrstedømmet Monaco</string>
-	<string name="Country.Romania">Romania</string>
-	<string name="Country.Russia">Russland</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saudi Arabia">Saudi-Arabia</string>
-	<string name="Country.Serbia">Serbia</string>
-	<string name="Country.Slovenia">Slovenia</string>
-	<string name="Country.Switzerland">Sveits</string>
-	<string name="Country.Tajikistan">Tadsjikistan</string>
-	<string name="Country.Turkey">Tyrkia</string>
-	<string name="Country.Ukraine">Ukraina</string>
-	<string name="Country.United Kingdom">Storbritannia</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Det forente kongerike Storbritannia og Nord-Irland</string>
-	<string name="Country.Uzbekistan">Usbekistan</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
