--- a/Language/strings_ru.xml
+++ b/Language/strings_ru.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Фильтр</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Избранное</string>
@@ -18,214 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Жанр</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Удалить</string>
   <string name="Webradio.Dialog.Search.Header">Поиск</string>
-	<string name="Country.Afghanistan">Афганистан</string>
-	<string name="Country.Albania">Албания</string>
-	<string name="Country.Algeria">Алжир</string>
-	<string name="Country.Andorra">Андорра</string>
-	<string name="Country.Angola">Ангола</string>
-	<string name="Country.Antigua and Barbuda">Антигуа и Барбуда</string>
-	<string name="Country.Argentina">Аргентина</string>
-	<string name="Country.Armenia">Армения</string>
-	<string name="Country.Australia">Австралия</string>
-	<string name="Country.Austria">Австрия</string>
-	<string name="Country.Azerbaijan">Азербайджан</string>
-	<string name="Country.Bahamas">Багамы</string>
-	<string name="Country.Bahrain">Бахрейн</string>
-	<string name="Country.Bangladesh">Бангладеш</string>
-	<string name="Country.Barbados">Барбадос</string>
-	<string name="Country.Belarus">Белоруссия</string>
-	<string name="Country.Belgium">Бельгия</string>
-	<string name="Country.Belize">Белиз</string>
-	<string name="Country.Belize">Британский Гондурас</string>
-	<string name="Country.Benin">Бенин</string>
-	<string name="Country.Bhutan">Бутан</string>
-	<string name="Country.Bolivia">Боливия</string>
-	<string name="Country.Bosnia and Herzegovina">Босния и Герцеговина</string>
-	<string name="Country.Botswana">Ботсвана</string>
-	<string name="Country.Brazil">Бразилия</string>
-	<string name="Country.Brunei">Бруней</string>
-	<string name="Country.Bulgaria">Болгария</string>
-	<string name="Country.Burkina Faso">Буркина Фасо</string>
-	<string name="Country.Burundi">Бурунди</string>
-	<string name="Country.Cambodia">Камбоджа</string>
-	<string name="Country.Cameroon">Камерун</string>
-	<string name="Country.Canada">Канада</string>
-	<string name="Country.Cape Verde">Kabo-Verde</string>
-	<string name="Country.Central African Republic">Centralno-Afrikanskaja Respublika</string>
-	<string name="Country.Chad">Чад</string>
-	<string name="Country.Chile">Чили</string>
-	<string name="Country.China">Китай</string>
-	<string name="Country.Colombia">Колумбия</string>
-	<string name="Country.Comoros">Коморские острова</string>
-	<string name="Country.Costa Rica">Kosta-Rika</string>
-	<string name="Country.Côte d'Ivoire">Кот д’Ивуар</string>
-	<string name="Country.Croatia">Хорватия</string>
-	<string name="Country.Cuba">Куба</string>
-	<string name="Country.Cyprus">Кипр</string>
-	<string name="Country.Czech Republic">Чехия</string>
-	<string name="Country.Denmark">Дания</string>
-	<string name="Country.Djibouti">Джибути</string>
-	<string name="Country.Dominica">Доминика</string>
-	<string name="Country.Dominican Republic">Доминиканская Республика</string>
-	<string name="Country.East Timor">Восточный Тимор</string>
-	<string name="Country.Ecuador">Эквадор</string>
-	<string name="Country.Egypt">Египет</string>
-	<string name="Country.El Salvador">Сальвадор</string>
-	<string name="Country.Equatorial Guinea">Экваториальная Гвинея</string>
-	<string name="Country.Eritrea">Эритрея</string>
-	<string name="Country.Estonia">Эстония</string>
-	<string name="Country.Ethiopia">Эфиопия</string>
-	<string name="Country.Ethiopia">Абиссиния</string>
-	<string name="Country.Falkland Islands">Фолклендские острова</string>
-	<string name="Country.Fiji">Фиджи</string>
-	<string name="Country.Finland">Финляндия</string>
-	<string name="Country.France">Фpaнция</string>
-	<string name="Country.French Guiana">Французская Гвиана</string>
-	<string name="Country.French Polynesia">Французская Полинезия</string>
-	<string name="Country.Gabon">Габон</string>
-	<string name="Country.Georgia">Грузия</string>
-	<string name="Country.Germany">Гepмaния</string>
-	<string name="Country.Ghana">Гана</string>
-	<string name="Country.Greece">Гpeция</string>
-	<string name="Country.Greenland">Гpeнлaндия</string>
-	<string name="Country.Grenada">Гренада</string>
-	<string name="Country.Guatemala">Гватемала</string>
-	<string name="Country.Guinea">Гвинея</string>
-	<string name="Country.Guinea-Bissau">Gvineya-Bisau</string>
-	<string name="Country.Guyana">Гайана</string>
-	<string name="Country.Haiti">Гаити</string>
-	<string name="Country.Holland">Гoллaндия</string>
-	<string name="Country.Holy See">Papskiy Prestol</string>
-	<string name="Country.Honduras">Гондурас</string>
-	<string name="Country.Hungary">Венгрия</string>
-	<string name="Country.Iceland">Иcлaндия</string>
-	<string name="Country.India">Индия</string>
-	<string name="Country.Indonesia">Индонезия</string>
-	<string name="Country.Iran">Иран</string>
-	<string name="Country.Iraq">Иpaк</string>
-	<string name="Country.Ireland">Иpлaндия</string>
-	<string name="Country.Israel">Изpaиль</string>
-	<string name="Country.Italy">Итaлия</string>
-	<string name="Country.Jamaica">Ямайка</string>
-	<string name="Country.Japan">Япoния</string>
-	<string name="Country.Jordan">Иордания</string>
-	<string name="Country.Kazakhstan">Казахстан</string>
-	<string name="Country.Kenya">Кения</string>
-	<string name="Country.Kiribati">Кирибати</string>
-	<string name="Country.Korea">Корея</string>
-	<string name="Country.Kuwait">Кувейт</string>
-	<string name="Country.Kyrgyzstan">Кыргызстан</string>
-	<string name="Country.Laos">Лаос</string>
-	<string name="Country.Latvia">Латвия</string>
-	<string name="Country.Lebanon">Ливaн</string>
-	<string name="Country.Lesotho">Лесото</string>
-	<string name="Country.Liberia">Либерия</string>
-	<string name="Country.Libya">Ливия</string>
-	<string name="Country.Liechtenstein">Лихтенштейн</string>
-	<string name="Country.Lithuania">Литва</string>
-	<string name="Country.Luxembourg">Люкceмбуpг</string>
-	<string name="Country.Republic of Macedonia">Македония</string>
-	<string name="Country.Madagascar">Мадагаскар</string>
-	<string name="Country.Malawi">Малави</string>
-	<string name="Country.Malaysia">Малайзия</string>
-	<string name="Country.Maldives">Мальдивы</string>
-	<string name="Country.Mali">Мали</string>
-	<string name="Country.Malta">Мальта</string>
-	<string name="Country.Marshall Islands">Маршалловы острова</string>
-	<string name="Country.Mauritania">Мавритания</string>
-	<string name="Country.Mauritius">Маврикий</string>
-	<string name="Country.Mexico">Meкcикa</string>
-	<string name="Country.Federated States of Micronesia">Микронезия</string>
-	<string name="Country.Moldova">Moлдaвия</string>
-	<string name="Country.Monaco">Монако</string>
-	<string name="Country.Mongolia">Монголия</string>
-	<string name="Country.Montenegro">Чepнoгopия</string>
-	<string name="Country.Montserrat">Монсеррат</string>
-	<string name="Country.Morocco">Марокко</string>
-	<string name="Country.Mozambique">Мозамбик</string>
-	<string name="Country.Myanmar">Мьянма</string>
-	<string name="Country.Myanmar">Биpмa</string>
-	<string name="Country.Namibia">Намибия</string>
-	<string name="Country.Nauru">Науру</string>
-	<string name="Country.Nepal">Непал</string>
-	<string name="Country.Netherlands">Нидерланды</string>
-	<string name="Country.New Zealand">Новая Зеландия</string>
-	<string name="Country.Nicaragua">Никарагуа</string>
-	<string name="Country.Niger">Нигер</string>
-	<string name="Country.Nigeria">Нигерия</string>
-	<string name="Country.Norway">Норвегия</string>
-	<string name="Country.Oman">Оман</string>
-	<string name="Country.Pakistan">Пакистан</string>
-	<string name="Country.Palau">Палау</string>
-	<string name="Country.Panama">Панама</string>
-	<string name="Country.Papua New Guinea">Papua-Novaya Gvineya</string>
-	<string name="Country.Paraguay">Парагвай</string>
-	<string name="Country.Peru">Перу</string>
-	<string name="Country.Philippines">Филиппины</string>
-	<string name="Country.Poland">Польша</string>
-	<string name="Country.Portugal">Португалия</string>
-	<string name="Country.Monaco">Княжество Монако</string>
-	<string name="Country.Qatar">Катар</string>
-	<string name="Country.Romania">Pумыния</string>
-	<string name="Country.Russia">Россия</string>
-	<string name="Country.Russia">Pуcь</string>
-	<string name="Country.Rwanda">Руанда</string>
-	<string name="Country.Saint Kitts and Nevis">Sent-Kitts i Nevis</string>
-	<string name="Country.Saint Lucia">Sent-Lusiya</string>
-	<string name="Country.Saint Vincent and the Grenadines"> Sent-Vinsent i Grenadiny </string>
-	<string name="Country.Samoa">Самоа</string>
-	<string name="Country.San Marino">San-Marino</string>
-	<string name="Country.São Tomé and Príncipe">San-Tome i Prinsipi</string>
-	<string name="Country.Saudi Arabia">Саудовская Аравия</string>
-	<string name="Country.Scotland">Шотландия</string>
-	<string name="Country.Senegal">Сенегал</string>
-	<string name="Country.Serbia">Cepбия</string>
-	<string name="Country.Seychelles">Сейшельские острова</string>
-	<string name="Country.Sierra Leone">Syerra-Leone</string>
-	<string name="Country.Singapore">Сингапур</string>
-	<string name="Country.Slovakia">Словакия</string>
-	<string name="Country.Slovenia">Словения</string>
-	<string name="Country.Solomon Islands">Соломоновы Острова</string>
-	<string name="Country.Somalia">Сомалия</string>
-	<string name="Country.South Africa">Yuzhno-Afrikanskaya Respublika</string>
-	<string name="Country.South Korea">Ю́жная Коре́я</string>
-	<string name="Country.South Ossetia">Ю́жная Осетия</string>
-	<string name="Country.Spain">Испания</string>
-	<string name="Country.Sri Lanka">Шри Ланка</string>
-	<string name="Country.Sri Lanka">Цейлон</string>
-	<string name="Country.Sudan">Судан</string>
-	<string name="Country.Suriname">Суринам</string>
-	<string name="Country.Swaziland">Свазиленд</string>
-	<string name="Country.Sweden">Швeция</string>
-	<string name="Country.Switzerland">Швeйцapия</string>
-	<string name="Country.Syria">Cиpия</string>
-	<string name="Country.Free Area of the Republic of China">Тайвань</string>
-	<string name="Country.Tajikistan">Таджикистан</string>
-	<string name="Country.Tanzania">Танзания</string>
-	<string name="Country.Thailand">Таиланд</string>
-	<string name="Country.The Gambia">Гамбия</string>
-	<string name="Country.Togo">Того</string>
-	<string name="Country.Tokelau Islands">Токелау</string>
-	<string name="Country.Tonga">Тонга</string>
-	<string name="Country.Transnistria">Приднестровье</string>
-	<string name="Country.Trinidad and Tobago">Тринидад и Тобаго</string>
-	<string name="Country.Tunisia">Тунис</string>
-	<string name="Country.Turkey">Турция</string>
-	<string name="Country.Turkmenistan">Туркменистан</string>
-	<string name="Country.Tuvalu">Тувалу</string>
-	<string name="Country.Uganda">Уганда</string>
-	<string name="Country.Ukraine">Украина</string>
-	<string name="Country.United Arab Emirates">Объединённые Арабские Эмираты</string>
-	<string name="Country.United Kingdom">Великобритания</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Соединённое Королевство Великобритании и Северной Ирландии</string>
-	<string name="Country.Uruguay">Уругвай</string>
-	<string name="Country.Uzbekistan">Узбекистан</string>
-	<string name="Country.Vanuatu">Вануату</string>
-	<string name="Country.Vatican City">Ватикан</string>
-	<string name="Country.Venezuela">Венесуэла</string>
-	<string name="Country.Vietnam">Вьетнам</string>
-	<string name="Country.Wales">Уэльс</string>
-	<string name="Country.Yemen">Йемен</string>
-	<string name="Country.Zambia">Замбия</string>
-	<string name="Country.Zimbabwe">Зимбабве</string>
 </resources>
