--- a/Language/strings_sk.xml
+++ b/Language/strings_sk.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Filter</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Obľúbené</string>
@@ -18,145 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Genre</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Vymazať</string>
   <string name="Webradio.Dialog.Search.Header">Hľadať</string>
-	<string name="Country.Afghanistan">Afganistan</string>
-	<string name="Country.Albania">Albánsko</string>
-	<string name="Country.Algeria">Alžírsko</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Antigua and Barbuda">Antigua a Barbuda</string>
-	<string name="Country.Argentina">Argentína</string>
-	<string name="Country.Armenia">Arménsko</string>
-	<string name="Country.Australia">Austrália</string>
-	<string name="Country.Austria">Rakúsko</string>
-	<string name="Country.Azerbaijan">Azerbajdžan</string>
-	<string name="Country.Bahamas">Bahamy</string>
-	<string name="Country.Bahrain">Bahrajn</string>
-	<string name="Country.Bangladesh">Bangladéš</string>
-	<string name="Country.Belarus">Bielorusko</string>
-	<string name="Country.Belgium">Belgicko</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Bhutan">Bhután</string>
-	<string name="Country.Bolivia">Bolívia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosna a Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brazília</string>
-	<string name="Country.Brunei">Brunej</string>
-	<string name="Country.Bulgaria">Bulharsko</string>
-	<string name="Country.Cambodia">Kambodža</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Kapverdy</string>
-	<string name="Country.Central African Republic">Stredoafrická republika</string>
-	<string name="Country.Chad">Čad</string>
-	<string name="Country.Chile">Čile</string>
-	<string name="Country.China">Čína</string>
-	<string name="Country.Colombia">Kolumbia</string>
-	<string name="Country.Comoros">Komory</string>
-	<string name="Country.Côte d'Ivoire">Pobrežie Slonoviny</string>
-	<string name="Country.Croatia">Chorvátsko</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Cyprus</string>
-	<string name="Country.Czech Republic">Česká republika</string>
-	<string name="Country.Denmark">Dánsko</string>
-	<string name="Country.Djibouti">Džibutsko</string>
-	<string name="Country.Dominican Republic">Dominikánska republika</string>
-	<string name="Country.Egypt">Egypt</string>
-	<string name="Country.Eritrea">Eritreja</string>
-	<string name="Country.Estonia">Estónsko</string>
-	<string name="Country.Ethiopia">Etiopia</string>
-	<string name="Country.Faroe Islands">Faerské ostrovy</string>
-	<string name="Country.Fiji">Fidži</string>
-	<string name="Country.Finland">Fínsko</string>
-	<string name="Country.France">Francúzsko</string>
-	<string name="Country.Georgia">Gruzínsko</string>
-	<string name="Country.Germany">Nemecko</string>
-	<string name="Country.Greece">Grécko</string>
-	<string name="Country.Greenland">Grónsko</string>
-	<string name="Country.Holland">Holandsko</string>
-	<string name="Country.Holy See">Svätá stolica</string>
-	<string name="Country.Hungary">Maďarsko</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">India</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Írsko</string>
-	<string name="Country.Israel">Izrael</string>
-	<string name="Country.Italy">Taliansko</string>
-	<string name="Country.Jamaica">Jamajka</string>
-	<string name="Country.Japan">Japonsko</string>
-	<string name="Country.Jordan">Jordánsko</string>
-	<string name="Country.Kazakhstan">Kazachstan</string>
-	<string name="Country.Kyrgyzstan">Kirgizsko</string>
-	<string name="Country.Latvia">Lotyšsko</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Libya">Líbya</string>
-	<string name="Country.Liechtenstein">Lichtenštajnsko</string>
-	<string name="Country.Lithuania">Litva</string>
-	<string name="Country.Luxembourg">Luxembursko</string>
-	<string name="Country.Republic of Macedonia">Macedónsko</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malaysia">Malajzia</string>
-	<string name="Country.Maldives">Maledivy</string>
-	<string name="Country.Marshall Islands">Marshallove ostrovy</string>
-	<string name="Country.Mexico">Mexiko</string>
-	<string name="Country.Moldova">Moldavsko</string>
-	<string name="Country.Monaco">Monako</string>
-	<string name="Country.Mongolia">Mongolsko</string>
-	<string name="Country.Montenegro">Čierna Hora</string>
-	<string name="Country.Morocco">Maroko</string>
-	<string name="Country.Mozambique">Mozambik</string>
-	<string name="Country.Myanmar">Mjanmarsko</string>
-	<string name="Country.Myanmar">Barma</string>
-	<string name="Country.New Zealand">Nový Zéland</string>
-	<string name="Country.Norway">Nórsko</string>
-	<string name="Country.Papua New Guinea">Papua-Nová Guinea</string>
-	<string name="Country.Philippines">Filipíny</string>
-	<string name="Country.Poland">Poľsko</string>
-	<string name="Country.Portugal">Portugalsko</string>
-	<string name="Country.Monaco">Monacké kniežatstvo</string>
-	<string name="Country.Qatar">Katar</string>
-	<string name="Country.Romania">Rumunsko</string>
-	<string name="Country.Russia">Rusko</string>
-	<string name="Country.Rwanda">Rwanda</string>
-	<string name="Country.Saint Helena">Svätá Helena</string>
-	<string name="Country.Samoa">Samoa</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.Saudi Arabia">Saudská Arábia</string>
-	<string name="Country.Scotland">Škótsko</string>
-	<string name="Country.Senegal">Senegal</string>
-	<string name="Country.Serbia">Srbsko</string>
-	<string name="Country.Sierra Leone">Sierra Leone</string>
-	<string name="Country.Slovakia">Slovensko</string>
-	<string name="Country.Slovenia">Slovinsko</string>
-	<string name="Country.Solomon Islands">Šalamúnove ostrovy</string>
-	<string name="Country.Somalia">Somálsko</string>
-	<string name="Country.South Africa">Juhoafrická republika</string>
-	<string name="Country.South Korea">Južná Kórea</string>
-	<string name="Country.Spain">Španielsko</string>
-	<string name="Country.Sudan">Sudán</string>
-	<string name="Country.Suriname">Surinam</string>
-	<string name="Country.Swaziland">Svazijsko</string>
-	<string name="Country.Sweden">Švédsko</string>
-	<string name="Country.Switzerland">Švajčiarsko</string>
-	<string name="Country.Syria">Sýria</string>
-	<string name="Country.Tajikistan">Tadžikistan</string>
-	<string name="Country.Tanzania">Tanzánia</string>
-	<string name="Country.Thailand">Thajsko</string>
-	<string name="Country.Trinidad and Tobago">Trinidad a Tobago</string>
-	<string name="Country.Tunisia">Tunisko</string>
-	<string name="Country.Turkey">Turecko</string>
-	<string name="Country.Turkmenistan">Turkménsko</string>
-	<string name="Country.Uganda">Uganda</string>
-	<string name="Country.Ukraine">Ukrajina</string>
-	<string name="Country.United Arab Emirates"> Spojené arabské emiráty </string>
-	<string name="Country.United Kingdom">Spojené kráľovstvo</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Spojené kráľovstvo Veľkej Británie a Severného Írska</string>
-	<string name="Country.United States of America">Spojené štáty americké</string>
-	<string name="Country.Uruguay">Uruguay</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vatican City">Vatikán</string>
-	<string name="Country.Venezuela">Venezuela</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Yemen">Jemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
