--- a/Language/strings_sr.xml
+++ b/Language/strings_sr.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.Home.Menu.ShowFilter">Филтер</string>
   <string name="Webradio.Home.Menu.ShowFavorites">Фаворити</string>
@@ -18,252 +18,4 @@
   <string name="Webradio.Dialog.ShowFilter.Genre">Жанр</string>
   <string name="Webradio.Dialog.DeleteFilter.Delete">Обриши</string>
   <string name="Webradio.Dialog.Search.Header">Потражи</string>
-	<string name="Country.Afghanistan">Авганистан</string>
-	<string name="Country.Åland Islands">Оландска острва</string>
-	<string name="Country.Albania">Албанија</string>
-	<string name="Country.Algeria">Алжир</string>
-	<string name="Country.American Samoa">Америчка Самоа</string>
-	<string name="Country.Andorra">Андора</string>
-	<string name="Country.Angola">Ангола</string>
-	<string name="Country.Anguilla">Ангвила</string>
-	<string name="Country.Antigua and Barbuda">Антигва и Барбуда</string>
-	<string name="Country.Argentina">Аргентина</string>
-	<string name="Country.Armenia">Јерменија</string>
-	<string name="Country.Aruba">Аруба</string>
-	<string name="Country.Australia">Аустралија</string>
-	<string name="Country.Austria">Аустрија</string>
-	<string name="Country.Azerbaijan">Азербејџан</string>
-	<string name="Country.Bahamas">Бахами</string>
-	<string name="Country.Bahrain">Бахреин</string>
-	<string name="Country.Bangladesh">Бангладеш</string>
-	<string name="Country.Barbados">Барбадос</string>
-	<string name="Country.Belarus">Белорусија</string>
-	<string name="Country.Belgium">Белгија</string>
-	<string name="Country.Belize">Белизе</string>
-	<string name="Country.Benin">Бенин</string>
-	<string name="Country.Bhutan">Бутан</string>
-	<string name="Country.Bolivia">Боливија</string>
-	<string name="Country.Bosnia and Herzegovina">Босна и Херцеговина</string>
-	<string name="Country.Botswana">Боцвана</string>
-	<string name="Country.Brazil">Бразил</string>
-	<string name="Country.British Virgin Islands">Британска Девичанска острва</string>
-	<string name="Country.Brunei">Брунеј</string>
-	<string name="Country.Bulgaria">Бугарска</string>
-	<string name="Country.Burkina Faso">Буркина Фасо</string>
-	<string name="Country.Burundi">Бурунди</string>
-	<string name="Country.Cambodia">Камбоџа</string>
-	<string name="Country.Cameroon">Камерун</string>
-	<string name="Country.Canada">Канада</string>
-	<string name="Country.Cape Verde">Зеленортска острва</string>
-	<string name="Country.Cayman Islands">Кајманска острва</string>
-	<string name="Country.Central African Republic">Централноафричка република</string>
-	<string name="Country.Chad">Чад</string>
-	<string name="Country.Chile">Чиле</string>
-	<string name="Country.China">Кина</string>
-	<string name="Country.Christmas Island">Божићно острво</string>
-	<string name="Country.Cocos (Keeling) Islands">Кокосова острва</string>
-	<string name="Country.Colombia">Колумбија</string>
-	<string name="Country.Comoros">Комори</string>
-	<string name="Country.Cook Islands">Кукова острва</string>
-	<string name="Country.Costa Rica">Костарика</string>
-	<string name="Country.Côte d'Ivoire">Обала Слоноваче</string>
-	<string name="Country.Croatia">Хрватска</string>
-	<string name="Country.Cuba">Куба</string>
-	<string name="Country.Cyprus">Кипар</string>
-	<string name="Country.Czech Republic">Češka</string>
-	<string name="Country.Denmark">Данска</string>
-	<string name="Country.Djibouti">Џибути</string>
-	<string name="Country.Dominica">Доминика</string>
-	<string name="Country.Dominican Republic">Доминиканска република</string>
-	<string name="Country.East Timor">Источни Тимор</string>
-	<string name="Country.Ecuador">Еквадор</string>
-	<string name="Country.Egypt">Египат</string>
-	<string name="Country.El Salvador">Сальвадор</string>
-	<string name="Country.Equatorial Guinea">Екваторијална Гвинеја</string>
-	<string name="Country.Eritrea">Еритреја</string>
-	<string name="Country.Estonia">Естонија</string>
-	<string name="Country.Ethiopia">Етиопија</string>
-	<string name="Country.Ethiopia">Абисиния</string>
-	<string name="Country.Falkland Islands">Фокландска острва</string>
-	<string name="Country.Faroe Islands">Фарска острва</string>
-	<string name="Country.Fiji">Фиџи</string>
-	<string name="Country.Finland">Финска</string>
-	<string name="Country.France">Француска</string>
-	<string name="Country.French Guiana">Француска Гвајана</string>
-	<string name="Country.French Polynesia">Француска Полинезија</string>
-	<string name="Country.French Southern and Antarctic Lands">Француске јужне и антарктичке земље</string>
-	<string name="Country.Gabon">Габон</string>
-	<string name="Country.Georgia">Грузија</string>
-	<string name="Country.Germany">Немачка</string>
-	<string name="Country.Ghana">Гана</string>
-	<string name="Country.Gibraltar">Гибралтар</string>
-	<string name="Country.Greece">Грчка</string>
-	<string name="Country.Greenland">Гренланд</string>
-	<string name="Country.Grenada">Гренада</string>
-	<string name="Country.Guadeloupe">Гваделуп</string>
-	<string name="Country.Guam">Гуам</string>
-	<string name="Country.Guatemala">Гватемала</string>
-	<string name="Country.Guinea">Гвинеја</string>
-	<string name="Country.Guinea-Bissau">Гвинеја Бисао</string>
-	<string name="Country.Guyana">Гвајана</string>
-	<string name="Country.Haiti">Хаити</string>
-	<string name="Country.Holland">Холандија</string>
-	<string name="Country.Holy See">Papska država</string>
-	<string name="Country.Honduras">Хондурас</string>
-	<string name="Country.Hong Kong">Хонгконг</string>
-	<string name="Country.Hungary">Мађарска</string>
-	<string name="Country.Iceland">Исланд</string>
-	<string name="Country.India">Индија</string>
-	<string name="Country.Indonesia">Индонезија</string>
-	<string name="Country.Iran">Иран</string>
-	<string name="Country.Iran">Персија</string>
-	<string name="Country.Iraq">Иpaк</string>
-	<string name="Country.Ireland">Ирска</string>
-	<string name="Country.Israel">Израел</string>
-	<string name="Country.Italy">Италија</string>
-	<string name="Country.Jamaica">Јамајка</string>
-	<string name="Country.Japan">Јапан</string>
-	<string name="Country.Jordan">Јордан</string>
-	<string name="Country.Kazakhstan">Казахстан</string>
-	<string name="Country.Kenya">Кенија</string>
-	<string name="Country.Kiribati">Кирибати</string>
-	<string name="Country.Korea">Кореја</string>
-	<string name="Country.Kuwait">Кувајт</string>
-	<string name="Country.Kyrgyzstan">Kirgistan</string>
-	<string name="Country.Laos">Лаос</string>
-	<string name="Country.Latvia">Летонија</string>
-	<string name="Country.Lebanon">Либан</string>
-	<string name="Country.Lesotho">Лесото</string>
-	<string name="Country.Liberia">Либерија</string>
-	<string name="Country.Libya">Либија</string>
-	<string name="Country.Liechtenstein">Лихтенштајн</string>
-	<string name="Country.Lithuania">Литванија</string>
-	<string name="Country.Luxembourg">Луксембург</string>
-	<string name="Country.Macau">Макао</string>
-	<string name="Country.Republic of Macedonia">Македонија</string>
-	<string name="Country.Madagascar">Мадагаскар</string>
-	<string name="Country.Malawi">Малави</string>
-	<string name="Country.Malaysia">Малезија</string>
-	<string name="Country.Maldives">Малдиви</string>
-	<string name="Country.Mali">Мали</string>
-	<string name="Country.Malta">Мальта</string>
-	<string name="Country.Marshall Islands">Маршалска острва</string>
-	<string name="Country.Martinique">Мартиник</string>
-	<string name="Country.Mauritania">Мауританија</string>
-	<string name="Country.Mauritius">Маурицијус</string>
-	<string name="Country.Mayotte">Мајот</string>
-	<string name="Country.Mexico">Мексико</string>
-	<string name="Country.Federated States of Micronesia">Микронезија</string>
-	<string name="Country.Moldova">Молдавија</string>
-	<string name="Country.Monaco">Монако</string>
-	<string name="Country.Mongolia">Монголија</string>
-	<string name="Country.Montenegro">Црна Гора</string>
-	<string name="Country.Montserrat">Монсерат</string>
-	<string name="Country.Morocco">Мароко</string>
-	<string name="Country.Mozambique">Мозамбик</string>
-	<string name="Country.Myanmar">Мјанмар</string>
-	<string name="Country.Myanmar">Бурма</string>
-	<string name="Country.Namibia">Намибија</string>
-	<string name="Country.Nauru">Науру</string>
-	<string name="Country.Nepal">Непал</string>
-	<string name="Country.Netherlands Antilles">Холандски Антили</string>
-	<string name="Country.Netherlands">Холандија</string>
-	<string name="Country.New Caledonia">Нова Каледонија</string>
-	<string name="Country.New Zealand">Нови Зеланд</string>
-	<string name="Country.Nicaragua">Никарагва</string>
-	<string name="Country.Niger">Нигер</string>
-	<string name="Country.Nigeria">Нигерија</string>
-	<string name="Country.Niue">Ниуе</string>
-	<string name="Country.Norfolk Island">Острво Норфок</string>
-	<string name="Country.North Korea">Северна Кореја</string>
-	<string name="Country.Northern Mariana Islands">Северна Маријанска острва</string>
-	<string name="Country.Norway">Норвешка</string>
-	<string name="Country.Oman">Оман</string>
-	<string name="Country.Pakistan">Пакистан</string>
-	<string name="Country.Palau">Палау</string>
-	<string name="Country.Palestinian territories">Палестина</string>
-	<string name="Country.Panama">Панама</string>
-	<string name="Country.Papua New Guinea">Папуа Нова Гвинеја</string>
-	<string name="Country.Paraguay">Парагвај</string>
-	<string name="Country.Peru">Перу</string>
-	<string name="Country.Philippines">Филипини</string>
-	<string name="Country.Pitcairn Islands">Острва Питкерн</string>
-	<string name="Country.Poland">Пољска</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Кнежевина Монако</string>
-	<string name="Country.Puerto Rico">Порторико</string>
-	<string name="Country.Qatar">Катар</string>
-	<string name="Country.Réunion">Реинион</string>
-	<string name="Country.Romania">Румунија</string>
-	<string name="Country.Russia">Русија</string>
-	<string name="Country.Rwanda">Руанда</string>
-	<string name="Country.Saint Helena">Света Јелена</string>
-	<string name="Country.Saint Kitts and Nevis">Сент Китс и Невис</string>
-	<string name="Country.Saint Lucia">Света Луција</string>
-	<string name="Country.Saint Pierre and Miquelon">Свети Пјер и Микелон</string>
-	<string name="Country.Saint Vincent and the Grenadines">Свети Винсент и Гренадини</string>
-	<string name="Country.Samoa">Самоа</string>
-	<string name="Country.San Marino">Сан Марино</string>
-	<string name="Country.São Tomé and Príncipe">Сао Томе и Принципе</string>
-	<string name="Country.Saudi Arabia">Саудијска Арабија</string>
-	<string name="Country.Scotland">Шкотска</string>
-	<string name="Country.Senegal">Сенегал</string>
-	<string name="Country.Serbia">Србија</string>
-	<string name="Country.Seychelles">Сејшели</string>
-	<string name="Country.Sierra Leone">Сијера Леоне</string>
-	<string name="Country.Singapore">Сингапур</string>
-	<string name="Country.Slovakia">Словачка</string>
-	<string name="Country.Slovenia">Словенија</string>
-	<string name="Country.Solomon Islands">Соломонова острва</string>
-	<string name="Country.Somalia">Сомалија</string>
-	<string name="Country.South Africa">Južnoafrička republika</string>
-	<string name="Country.South Georgia and South Sandwich Islands">Јужна Џорџија и Јужна Сендвичка острва</string>
-	<string name="Country.South Korea">Јужна Кореја</string>
-	<string name="Country.South Ossetia">Јужна Осетија</string>
-	<string name="Country.Spain">Шпанија</string>
-	<string name="Country.Sri Lanka">Шри Ланка</string>
-	<string name="Country.Sri Lanka">Цејлон</string>
-	<string name="Country.Sudan">Судан</string>
-	<string name="Country.Suriname">Суринам</string>
-	<string name="Country.Suriname">Холандска Гвајана</string>
-	<string name="Country.Swaziland">Свазиленд</string>
-	<string name="Country.Sweden">Шведска</string>
-	<string name="Country.Switzerland">Швајцарска</string>
-	<string name="Country.Syria">Сирија</string>
-	<string name="Country.Free Area of the Republic of China">Тајван</string>
-	<string name="Country.Free Area of the Republic of China">Формоза</string>
-	<string name="Country.Tajikistan">Таџикистан</string>
-	<string name="Country.Tanzania">Танзанија</string>
-	<string name="Country.Thailand">Тајланд</string>
-	<string name="Country.The Gambia">Гамбија</string>
-	<string name="Country.Togo">Того</string>
-	<string name="Country.Tokelau Islands">Токелау</string>
-	<string name="Country.Tonga">Тонга</string>
-	<string name="Country.Transnistria">Придњестровска молдавска република</string>
-	<string name="Country.Trinidad and Tobago">Тринидад и Тобаго</string>
-	<string name="Country.Tunisia">Тунис</string>
-	<string name="Country.Turkey">Турска</string>
-	<string name="Country.Northern Cyprus">Северни Кипар</string>
-	<string name="Country.Turkmenistan">Туркменистан</string>
-	<string name="Country.Turks and Caicos Islands">Туркс и Кајкос</string>
-	<string name="Country.Tuvalu">Тувалу</string>
-	<string name="Country.Uganda">Уганда</string>
-	<string name="Country.Ukraine">Украјина</string>
-	<string name="Country.United Arab Emirates"> Ujedinjeni arapski emirati </string>
-	<string name="Country.United Kingdom">Уједињено Краљевство</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Ујдињено Краљевство Велике Британије и Северне Ирске</string>
-	<string name="Country.United States Virgin Islands">Америчка Девичанска острва</string>
-	<string name="Country.Uruguay">Уругвај</string>
-	<string name="Country.Uzbekistan">Узбекистан</string>
-	<string name="Country.Vanuatu">Вануату</string>
-	<string name="Country.Vanuatu">Нови Хебриди</string>
-	<string name="Country.Vatican City">Ватикан</string>
-	<string name="Country.Venezuela">Венецуела</string>
-	<string name="Country.Vietnam">Вијетнам</string>
-	<string name="Country.Wales">Велс</string>
-	<string name="Country.Wallis and Futuna">Валис и Футуна</string>
-	<string name="Country.Western Sahara">Западна Сахара</string>
-	<string name="Country.Yemen">Јемен</string>
-	<string name="Country.Zambia">Замбија</string>
-	<string name="Country.Zimbabwe">Зимбабве</string>
 </resources>
