--- a/Language/strings_sv.xml
+++ b/Language/strings_sv.xml
@@ -1,4 +1,4 @@
-﻿<?xml version='1.0' encoding='UTF-8'?>
+<?xml version='1.0' encoding='UTF-8'?>
 <resources>
   <string name="Webradio.MenuEntry">Webradio</string>
   <string name="Webradio.StateDisplayLabel">Webradio</string>
@@ -45,146 +45,4 @@
   <string name="Webradio.Dialog.ShowFavorites.SetFav">Lägg till eller ta bort valda strömmar från favoriter</string>
   <string name="Webradio.Dialog.ImportFavorites.Header">Importfilter</string>
   <string name="Webradio.Dialog.Search.Header">Sök</string>
-	<string name="Country.Afghanistan">Afghanistan</string>
-	<string name="Country.Åland Islands">Åland</string>
-	<string name="Country.Algeria">Algeriet</string>
-	<string name="Country.Andorra">Andorra</string>
-	<string name="Country.Antigua and Barbuda">Antigua och Barbuda</string>
-	<string name="Country.Argentina">Argentina</string>
-	<string name="Country.Armenia">Armenien</string>
-	<string name="Country.Australia">Australien</string>
-	<string name="Country.Austria">Österrike</string>
-	<string name="Country.Azerbaijan">Azerbajdzjan</string>
-	<string name="Country.Bahrain">Bahrain</string>
-	<string name="Country.Bangladesh">Bangladesh</string>
-	<string name="Country.Barbados">Barbados</string>
-	<string name="Country.Belarus">Vitryssland</string>
-	<string name="Country.Belize">Belize</string>
-	<string name="Country.Benin">Dahomey</string>
-	<string name="Country.Bhutan">Bhutan</string>
-	<string name="Country.Bolivia">Bolivia</string>
-	<string name="Country.Bosnia and Herzegovina">Bosnien och Hercegovina</string>
-	<string name="Country.Botswana">Botswana</string>
-	<string name="Country.Brazil">Brasilien</string>
-	<string name="Country.Brunei">Brunei</string>
-	<string name="Country.Bulgaria">Bulgarien</string>
-	<string name="Country.Cambodia">Kambodja</string>
-	<string name="Country.Cameroon">Kamerun</string>
-	<string name="Country.Canada">Kanada</string>
-	<string name="Country.Cape Verde">Kap Verde</string>
-	<string name="Country.Central African Republic">Centralafrikanska republiken</string>
-	<string name="Country.Chad">Tchad</string>
-	<string name="Country.Chile">Chile</string>
-	<string name="Country.China">Kina</string>
-	<string name="Country.Colombia">Colombia</string>
-	<string name="Country.Comoros">Komorerna</string>
-	<string name="Country.Côte d'Ivoire">Elfenbenskusten</string>
-	<string name="Country.Croatia">Kroatien</string>
-	<string name="Country.Cuba">Kuba</string>
-	<string name="Country.Cyprus">Cypern</string>
-	<string name="Country.Czech Republic">Tjeckien</string>
-	<string name="Country.Denmark">Danmark</string>
-	<string name="Country.Djibouti">Djibouti</string>
-	<string name="Country.Dominica">Dominica</string>
-	<string name="Country.Dominican Republic">Dominikanska republiken</string>
-	<string name="Country.East Timor">Östtimor</string>
-	<string name="Country.Egypt">Egypten</string>
-	<string name="Country.El Salvador">El Salvador</string>
-	<string name="Country.Equatorial Guinea">Ekvatorialguinea</string>
-	<string name="Country.Eritrea">Eritrea</string>
-	<string name="Country.Estonia">Estland</string>
-	<string name="Country.Ethiopia">Etiopien</string>
-	<string name="Country.Ethiopia">Abessinien</string>
-	<string name="Country.Falkland Islands">Falklandsöarna</string>
-	<string name="Country.Faroe Islands">Färöarna</string>
-	<string name="Country.Fiji">Fiji</string>
-	<string name="Country.Finland">Finland</string>
-	<string name="Country.France">Frankrike</string>
-	<string name="Country.Georgia">Georgien</string>
-	<string name="Country.Germany">Tyskland</string>
-	<string name="Country.Greece">Grekland</string>
-	<string name="Country.Holland">Holland</string>
-	<string name="Country.Holy See">Heliga Stolen</string>
-	<string name="Country.Hungary">Ungern</string>
-	<string name="Country.Iceland">Island</string>
-	<string name="Country.India">Indien</string>
-	<string name="Country.Indonesia">Indonesien</string>
-	<string name="Country.Iran">Iran</string>
-	<string name="Country.Iraq">Irak</string>
-	<string name="Country.Ireland">Irland</string>
-	<string name="Country.Italy">Italien</string>
-	<string name="Country.Japan">Japan</string>
-	<string name="Country.Jordan">Jordanien</string>
-	<string name="Country.Jordan">Transjordanien</string>
-	<string name="Country.Kazakhstan">Kazakhstan</string>
-	<string name="Country.Kenya">Kenya</string>
-	<string name="Country.Korea">Korea</string>
-	<string name="Country.Kuwait"> Kuwait </string>
-	<string name="Country.Kyrgyzstan">Kirgizistan</string>
-	<string name="Country.Latvia">Lettland</string>
-	<string name="Country.Lebanon">Libanon</string>
-	<string name="Country.Libya">Libyen</string>
-	<string name="Country.Lithuania">Litauen</string>
-	<string name="Country.Luxembourg">Luxemburg</string>
-	<string name="Country.Republic of Macedonia">Makedonien</string>
-	<string name="Country.Madagascar">Madagaskar</string>
-	<string name="Country.Malaysia">Malaysia</string>
-	<string name="Country.Maldives">Maldiverna</string>
-	<string name="Country.Marshall Islands">Marshallöarna</string>
-	<string name="Country.Mauritania">Mauretanien</string>
-	<string name="Country.Mexico">Mexiko</string>
-	<string name="Country.Moldova">Moldavien</string>
-	<string name="Country.Monaco">Monaco</string>
-	<string name="Country.Mongolia">Mongoliet</string>
-	<string name="Country.Montenegro">Montenegro</string>
-	<string name="Country.Morocco">Marocko</string>
-	<string name="Country.Mozambique">Moçambique</string>
-	<string name="Country.Myanmar">Myanmar</string>
-	<string name="Country.Myanmar">Burma</string>
-	<string name="Country.Netherlands">Nederländerna</string>
-	<string name="Country.New Caledonia">Nya Kaledonien</string>
-	<string name="Country.New Zealand">Nya Zeeland</string>
-	<string name="Country.North Korea">Nordkorea</string>
-	<string name="Country.Palestinian territories">Palestina</string>
-	<string name="Country.Papua New Guinea">Papua Nya Guinea</string>
-	<string name="Country.Philippines">Filippinerna</string>
-	<string name="Country.Poland">Polen</string>
-	<string name="Country.Portugal">Portugal</string>
-	<string name="Country.Monaco">Furstendömet Monaco</string>
-	<string name="Country.Qatar">Qatar</string>
-	<string name="Country.Romania">Rumänien</string>
-	<string name="Country.Russia">Ryssland</string>
-	<string name="Country.San Marino">San Marino</string>
-	<string name="Country.Saudi Arabia">Saudiarabien</string>
-	<string name="Country.Scotland">Skottland</string>
-	<string name="Country.Serbia">Serbien</string>
-	<string name="Country.Seychelles">Seychellerna</string>
-	<string name="Country.Slovakia">Slovakien</string>
-	<string name="Country.Slovenia">Slovenien</string>
-	<string name="Country.Solomon Islands">Salomonöarna</string>
-	<string name="Country.South Africa">Sydafrika</string>
-	<string name="Country.South Korea">Sydkorea</string>
-	<string name="Country.South Ossetia">Sydossetien</string>
-	<string name="Country.Spain">Spanien</string>
-	<string name="Country.Sweden">Sverige</string>
-	<string name="Country.Switzerland">Schweiz</string>
-	<string name="Country.Syria">Syrien</string>
-	<string name="Country.Free Area of the Republic of China">Taiwan</string>
-	<string name="Country.Tajikistan">Tadzjikistan</string>
-	<string name="Country.Thailand">Thailand</string>
-	<string name="Country.Tunisia">Tunisien</string>
-	<string name="Country.Turkey">Turkiet</string>
-	<string name="Country.Turkmenistan">Turkmenistan</string>
-	<string name="Country.Turks and Caicos Islands">Turk- och caicosöarna</string>
-	<string name="Country.Ukraine">Ukraina</string>
-	<string name="Country.United Arab Emirates"> Förenade Arabemiraten </string>
-	<string name="Country.United Kingdom">Storbritannien</string>
-	<string name="Country.United Kingdom of Great Britain and Northern Ireland">Förenade konungariket Storbritannien och Nordirland</string>
-	<string name="Country.Uzbekistan">Uzbekistan</string>
-	<string name="Country.Vatican City">Vatikanstaten</string>
-	<string name="Country.Vietnam">Vietnam</string>
-	<string name="Country.Wales">Wales</string>
-	<string name="Country.Yemen">Yemen</string>
-	<string name="Country.Zambia">Zambia</string>
-	<string name="Country.Zimbabwe">Zimbabwe</string>
 </resources>
